Refactoring of notebooks using pre-commit

--- a/notebooks/cnn/cnn_time_ser_qat.ipynb
+++ b/notebooks/cnn/cnn_time_ser_qat.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "# import tensorflow_io\n",
     "# from tensorflow_model_optimization.python.core.keras.compat import keras\n",
-    "# from tensorflow_model_optimization.quantization import keras\n"
+    "# from tensorflow_model_optimization.quantization import keras"
    ]
   },
   {
@@ -60,25 +60,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import tensorflow as tf\n",
+    "\n",
     "# from tensorflow_model_optimization.python.core.keras.compat import keras\n",
     "import tensorflow_model_optimization as tfmot\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
-    "import sys \n",
-    "sys.path.append(\"C:/Users/polin/TinyBirdSounds\") \n",
+    "sys.path.append(\"C:/Users/polin/TinyBirdSounds\")\n",
     "\n",
-    "from create_spectrogram import (\n",
-    "    create_spectrograms_from_audio_dataset, \n",
-    ")\n",
+    "from create_spectrogram import create_spectrograms_from_audio_dataset\n",
     "from helper_functions import (\n",
-    "    get_file_size, \n",
-    "    convert_bytes, \n",
+    "    convert_bytes,\n",
     "    convert_prefetchdataset_to_numpy_arrays,\n",
+    "    evaluate_time_of_prediction,\n",
+    "    get_file_size,\n",
     "    predict_and_print_full_results,\n",
-    "    evaluate_time_of_prediction\n",
-    "    )"
+    ")"
    ]
   },
   {
@@ -132,9 +132,30 @@
     }
    ],
    "source": [
-    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/training\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/testing\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/validation\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
+    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/training\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/testing\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/validation\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
     "\n",
     "label_names = np.array(train_dataset.class_names)\n",
     "print(\"Classes: \", label_names)"
@@ -155,9 +176,15 @@
     }
    ],
    "source": [
-    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(train_dataset, data_type=\"time-series\")\n",
-    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(val_dataset, data_type=\"time-series\")\n",
-    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(test_dataset, data_type=\"time-series\")"
+    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    train_dataset, data_type=\"time-series\"\n",
+    ")\n",
+    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    val_dataset, data_type=\"time-series\"\n",
+    ")\n",
+    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    test_dataset, data_type=\"time-series\"\n",
+    ")"
    ]
   },
   {
@@ -204,7 +231,9 @@
     }
    ],
    "source": [
-    "BASE_MODEL_FILE_NAME = \"../time_series_models_from_notebooks/cnn/hpo/cnn_time_ser_3_conv_layer_model.keras\"\n",
+    "BASE_MODEL_FILE_NAME = (\n",
+    "    \"../time_series_models_from_notebooks/cnn/hpo/cnn_time_ser_3_conv_layer_model.keras\"\n",
+    ")\n",
     "base_model = tf.keras.models.load_model(BASE_MODEL_FILE_NAME)\n",
     "base_model.summary()\n",
     "convert_bytes(get_file_size(BASE_MODEL_FILE_NAME), \"MB\")"
@@ -236,7 +265,7 @@
    ],
    "source": [
     "q_aware_model = tfmot.quantization.keras.quantize_annotate_model(base_model)\n",
-    "q_aware_model = tfmot.quantization.keras.quantize_model(q_aware_model)\n"
+    "q_aware_model = tfmot.quantization.keras.quantize_model(q_aware_model)"
    ]
   },
   {
@@ -268,9 +297,9 @@
     "        return tfmot.quantization.keras.quantize_annotate_layer(layer)\n",
     "    return layer\n",
     "\n",
+    "\n",
     "annotated_model = tf.keras.models.clone_model(\n",
-    "    base_model,\n",
-    "    clone_function=apply_quantization_to_conv1d\n",
+    "    base_model, clone_function=apply_quantization_to_conv1d\n",
     ")\n",
     "\n",
     "# Apply quantization\n",
@@ -304,50 +333,69 @@
     "LastValueQuantizer = tfmot.quantization.keras.quantizers.LastValueQuantizer\n",
     "MovingAverageQuantizer = tfmot.quantization.keras.quantizers.MovingAverageQuantizer\n",
     "\n",
+    "\n",
     "class DefaultDenseQuantizeConfig(tfmot.quantization.keras.QuantizeConfig):\n",
     "    # Configure how to quantize weights.\n",
     "    def get_weights_and_quantizers(self, layer):\n",
-    "      return [(layer.kernel, LastValueQuantizer(num_bits=8, symmetric=True, narrow_range=False, per_axis=False))]\n",
+    "        return [\n",
+    "            (\n",
+    "                layer.kernel,\n",
+    "                LastValueQuantizer(\n",
+    "                    num_bits=8, symmetric=True, narrow_range=False, per_axis=False\n",
+    "                ),\n",
+    "            )\n",
+    "        ]\n",
     "\n",
     "    # Configure how to quantize activations.\n",
     "    def get_activations_and_quantizers(self, layer):\n",
-    "      return [(layer.activation, MovingAverageQuantizer(num_bits=8, symmetric=False, narrow_range=False, per_axis=False))]\n",
+    "        return [\n",
+    "            (\n",
+    "                layer.activation,\n",
+    "                MovingAverageQuantizer(\n",
+    "                    num_bits=8, symmetric=False, narrow_range=False, per_axis=False\n",
+    "                ),\n",
+    "            )\n",
+    "        ]\n",
     "\n",
     "    def set_quantize_weights(self, layer, quantize_weights):\n",
-    "      # Add this line for each item returned in `get_weights_and_quantizers`\n",
-    "      # , in the same order\n",
-    "      layer.kernel = quantize_weights[0]\n",
+    "        # Add this line for each item returned in `get_weights_and_quantizers`\n",
+    "        # , in the same order\n",
+    "        layer.kernel = quantize_weights[0]\n",
     "\n",
     "    def set_quantize_activations(self, layer, quantize_activations):\n",
-    "      # Add this line for each item returned in `get_activations_and_quantizers`\n",
-    "      # , in the same order.\n",
-    "      layer.activation = quantize_activations[0]\n",
+    "        # Add this line for each item returned in `get_activations_and_quantizers`\n",
+    "        # , in the same order.\n",
+    "        layer.activation = quantize_activations[0]\n",
     "\n",
     "    # Configure how to quantize outputs (may be equivalent to activations).\n",
     "    def get_output_quantizers(self, layer):\n",
-    "      return []\n",
+    "        return []\n",
     "\n",
     "    def get_config(self):\n",
-    "      return {}\n",
-    "    \n",
+    "        return {}\n",
     "\n",
     "\n",
     "quantize_annotate_layer = tfmot.quantization.keras.quantize_annotate_layer\n",
     "quantize_annotate_model = tfmot.quantization.keras.quantize_annotate_model\n",
     "quantize_scope = tfmot.quantization.keras.quantize_scope\n",
     "\n",
+    "\n",
     "class CustomLayer(tf.keras.layers.Conv1D):\n",
-    "  pass\n",
+    "    pass\n",
+    "\n",
     "\n",
     "model = quantize_annotate_model(base_model)\n",
     "\n",
     "# `quantize_apply` requires mentioning `DefaultDenseQuantizeConfig` with `quantize_scope`\n",
     "# as well as the custom Keras layer.\n",
     "with quantize_scope(\n",
-    "  {'DefaultDenseQuantizeConfig': DefaultDenseQuantizeConfig,\n",
-    "   'CustomLayer': CustomLayer}):\n",
-    "  # Use `quantize_apply` to actually make the model quantization aware.\n",
-    "  quant_aware_model = tfmot.quantization.keras.quantize_apply(model)\n",
+    "    {\n",
+    "        \"DefaultDenseQuantizeConfig\": DefaultDenseQuantizeConfig,\n",
+    "        \"CustomLayer\": CustomLayer,\n",
+    "    }\n",
+    "):\n",
+    "    # Use `quantize_apply` to actually make the model quantization aware.\n",
+    "    quant_aware_model = tfmot.quantization.keras.quantize_apply(model)\n",
     "\n",
     "quant_aware_model.summary()"
    ]
@@ -386,43 +434,64 @@
    ],
    "source": [
     "# Define a custom quantization scheme\n",
+    "\n",
+    "\n",
     "class CustomQuantizeConfig(tfmot.quantization.keras.QuantizeConfig):\n",
     "    def get_weights_and_quantizers(self, layer):\n",
-    "      return [(layer.kernel, tfmot.quantization.keras.quantizers.LastValueQuantizer(num_bits=8, symmetric=True, narrow_range=False, per_axis=False))]\n",
+    "        return [\n",
+    "            (\n",
+    "                layer.kernel,\n",
+    "                tfmot.quantization.keras.quantizers.LastValueQuantizer(\n",
+    "                    num_bits=8, symmetric=True, narrow_range=False, per_axis=False\n",
+    "                ),\n",
+    "            )\n",
+    "        ]\n",
     "\n",
     "    # Configure how to quantize activations.\n",
     "    def get_activations_and_quantizers(self, layer):\n",
-    "      return [(layer.activation, tfmot.quantization.keras.quantizers.MovingAverageQuantizer(num_bits=8, symmetric=False, narrow_range=False, per_axis=False))]\n",
+    "        return [\n",
+    "            (\n",
+    "                layer.activation,\n",
+    "                tfmot.quantization.keras.quantizers.MovingAverageQuantizer(\n",
+    "                    num_bits=8, symmetric=False, narrow_range=False, per_axis=False\n",
+    "                ),\n",
+    "            )\n",
+    "        ]\n",
     "\n",
     "    def set_quantize_weights(self, layer, quantize_weights):\n",
-    "      # Add this line for each item returned in `get_weights_and_quantizers`\n",
-    "      # , in the same order\n",
-    "      layer.kernel = quantize_weights[0]\n",
+    "        # Add this line for each item returned in `get_weights_and_quantizers`\n",
+    "        # , in the same order\n",
+    "        layer.kernel = quantize_weights[0]\n",
     "\n",
     "    def set_quantize_activations(self, layer, quantize_activations):\n",
-    "      # Add this line for each item returned in `get_activations_and_quantizers`\n",
-    "      # , in the same order.\n",
-    "      layer.activation = quantize_activations[0]\n",
+    "        # Add this line for each item returned in `get_activations_and_quantizers`\n",
+    "        # , in the same order.\n",
+    "        layer.activation = quantize_activations[0]\n",
     "\n",
     "    # Configure how to quantize outputs (may be equivalent to activations).\n",
     "    def get_output_quantizers(self, layer):\n",
-    "      return []\n",
+    "        return []\n",
     "\n",
     "    def get_config(self):\n",
-    "      return {}\n",
+    "        return {}\n",
+    "\n",
     "\n",
     "# Apply custom quantization\n",
+    "\n",
+    "\n",
     "def apply_custom_quantization_to_layer(layer):\n",
     "    if isinstance(layer, tf.keras.layers.Conv1D):\n",
-    "        return tfmot.quantization.keras.quantize_annotate_layer(layer, quantize_config=CustomQuantizeConfig())\n",
+    "        return tfmot.quantization.keras.quantize_annotate_layer(\n",
+    "            layer, quantize_config=CustomQuantizeConfig()\n",
+    "        )\n",
     "    return layer\n",
     "\n",
+    "\n",
     "annotated_model = tf.keras.models.clone_model(\n",
-    "    base_model,\n",
-    "    clone_function=apply_custom_quantization_to_layer\n",
+    "    base_model, clone_function=apply_custom_quantization_to_layer\n",
     ")\n",
     "\n",
-    "quant_aware_model = tfmot.quantization.keras.quantize_apply(annotated_model)\n"
+    "quant_aware_model = tfmot.quantization.keras.quantize_apply(annotated_model)"
    ]
   },
   {
@@ -480,9 +549,11 @@
     }
    ],
    "source": [
-    "q_aware_model.compile(optimizer='adam',\n",
-    "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "              metrics=['accuracy'])\n",
+    "q_aware_model.compile(\n",
+    "    optimizer=\"adam\",\n",
+    "    loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "    metrics=[\"accuracy\"],\n",
+    ")\n",
     "\n",
     "q_aware_model.summary()"
    ]
@@ -538,8 +609,9 @@
     }
    ],
    "source": [
-    "q_aware_model.fit(x_train_np[:500], y_train_np[:500],\n",
-    "                  batch_size=32, epochs=1, validation_split=0.1)"
+    "q_aware_model.fit(\n",
+    "    x_train_np[:500], y_train_np[:500], batch_size=32, epochs=1, validation_split=0.1\n",
+    ")"
    ]
   },
   {
@@ -557,14 +629,12 @@
     }
    ],
    "source": [
-    "_, baseline_model_accuracy = base_model.evaluate(\n",
-    "    x_test_np, y_test_np, verbose=0)\n",
+    "_, baseline_model_accuracy = base_model.evaluate(x_test_np, y_test_np, verbose=0)\n",
     "\n",
-    "_, q_aware_model_accuracy = q_aware_model.evaluate(\n",
-    "   x_test_np, y_test_np, verbose=0)\n",
+    "_, q_aware_model_accuracy = q_aware_model.evaluate(x_test_np, y_test_np, verbose=0)\n",
     "\n",
-    "print('Baseline test accuracy:', baseline_model_accuracy)\n",
-    "print('Quant test accuracy:', q_aware_model_accuracy)"
+    "print(\"Baseline test accuracy:\", baseline_model_accuracy)\n",
+    "print(\"Quant test accuracy:\", q_aware_model_accuracy)"
    ]
   },
   {
@@ -619,10 +689,10 @@
    "source": [
     "interpreter = tf.lite.Interpreter(model_content=quantized_tflite_model)\n",
     "interpreter.allocate_tensors()\n",
-    "input_type = interpreter.get_input_details()[0]['dtype']\n",
-    "print('input: ', input_type)\n",
-    "output_type = interpreter.get_output_details()[0]['dtype']\n",
-    "print('output: ', output_type)"
+    "input_type = interpreter.get_input_details()[0][\"dtype\"]\n",
+    "print(\"input: \", input_type)\n",
+    "output_type = interpreter.get_output_details()[0][\"dtype\"]\n",
+    "print(\"output: \", output_type)"
    ]
   },
   {
@@ -665,17 +735,21 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(quantized_tflite_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    quantized_tflite_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    "    ) = predict_and_print_full_results(quantized_tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\")"
+    ") = predict_and_print_full_results(\n",
+    "    quantized_tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")"
    ]
   },
   {
@@ -702,7 +776,9 @@
    ],
    "source": [
     "print(\"For Test dataset:\")\n",
-    "evaluate_time_of_prediction(quantized_tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\")"
+    "evaluate_time_of_prediction(\n",
+    "    quantized_tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")"
    ]
   },
   {
@@ -721,7 +797,9 @@
    ],
    "source": [
     "# Save model and print its size\n",
-    "QAT_MODEL_FILE_NAME = \"../spectrogram_models_from_notebooks/cnn/quantized/cnn_mel_speq_qat.tflite\"\n",
+    "QAT_MODEL_FILE_NAME = (\n",
+    "    \"../spectrogram_models_from_notebooks/cnn/quantized/cnn_mel_speq_qat.tflite\"\n",
+    ")\n",
     "open(QAT_MODEL_FILE_NAME, \"wb\").write(quantized_tflite_model)\n",
     "print(\"Model file name: \", QAT_MODEL_FILE_NAME)\n",
     "convert_bytes(get_file_size(QAT_MODEL_FILE_NAME), \"KB\")"
