--- a/notebooks/results_and_figures/spectrogram_figure_creation.ipynb
+++ b/notebooks/results_and_figures/spectrogram_figure_creation.ipynb
@@ -21,10 +21,10 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "import tensorflow_io as tfio\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import tensorflow as tf\n",
+    "import tensorflow_io as tfio"
    ]
   },
   {
@@ -33,8 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_rate=16000\n",
-    "desired_length =48000"
+    "sample_rate = 16000\n",
+    "desired_length = 48000"
    ]
   },
   {
@@ -51,12 +51,13 @@
     "    audio = tf.squeeze(audio, axis=-1)\n",
     "    return audio, labels\n",
     "\n",
+    "\n",
     "def plot_spectrogram(spectrogram, ax):\n",
     "    height = spectrogram.shape[0]\n",
     "    width = spectrogram.shape[1]\n",
     "    X = np.linspace(0, np.size(spectrogram), num=width, dtype=int)\n",
     "    Y = range(height)\n",
-    "    ax.pcolormesh(X, Y, spectrogram)\n"
+    "    ax.pcolormesh(X, Y, spectrogram)"
    ]
   },
   {
@@ -66,22 +67,36 @@
    "outputs": [],
    "source": [
     "# Group1\n",
-    "group1_record_non_target_file1 = '../../dataset/testing/non_target/1.000_0002_36wiH3sPukY_40.wav'\n",
-    "group1_record_non_target_file2 = '../../dataset/testing/non_target/0.920_0001_703520.wav'\n",
-    "group1_record_non_target_file3 = '../../dataset/testing/non_target/0.930_0012_305620.wav'\n",
+    "group1_record_non_target_file1 = (\n",
+    "    \"../../dataset/testing/non_target/1.000_0002_36wiH3sPukY_40.wav\"\n",
+    ")\n",
+    "group1_record_non_target_file2 = (\n",
+    "    \"../../dataset/testing/non_target/0.920_0001_703520.wav\"\n",
+    ")\n",
+    "group1_record_non_target_file3 = (\n",
+    "    \"../../dataset/testing/non_target/0.930_0012_305620.wav\"\n",
+    ")\n",
     "\n",
-    "group1_record_target_file1 = '../../dataset/testing/target/0.770_0001_200624_1661_2.wav'\n",
-    "group1_record_target_file2 = '../../dataset/testing/target/0.940_0041_736736.wav'\n",
-    "group1_record_target_file3 = '../../dataset/testing/target/0.960_0052_86290.wav'\n",
+    "group1_record_target_file1 = \"../../dataset/testing/target/0.770_0001_200624_1661_2.wav\"\n",
+    "group1_record_target_file2 = \"../../dataset/testing/target/0.940_0041_736736.wav\"\n",
+    "group1_record_target_file3 = \"../../dataset/testing/target/0.960_0052_86290.wav\"\n",
     "\n",
     "# Group2\n",
-    "group2_record_non_target_file1 = '../../dataset/testing/non_target/1.000_0002_-uBbPbRML3U_290.wav'\n",
-    "group2_record_non_target_file2 = '../../dataset/testing/non_target/0.940_0030_112804.wav'\n",
-    "group2_record_non_target_file3 = '../../dataset/testing/non_target/0.930_0011_121693.wav'\n",
+    "group2_record_non_target_file1 = (\n",
+    "    \"../../dataset/testing/non_target/1.000_0002_-uBbPbRML3U_290.wav\"\n",
+    ")\n",
+    "group2_record_non_target_file2 = (\n",
+    "    \"../../dataset/testing/non_target/0.940_0030_112804.wav\"\n",
+    ")\n",
+    "group2_record_non_target_file3 = (\n",
+    "    \"../../dataset/testing/non_target/0.930_0011_121693.wav\"\n",
+    ")\n",
     "\n",
-    "group2_record_target_file1 = '../../dataset/testing/target/0.970_0058_R21_2022_02_23_07_59_47.wav'\n",
-    "group2_record_target_file2 = '../../dataset/testing/target/0.940_0009_784426.wav'\n",
-    "group2_record_target_file3 = '../../dataset/testing/target/0.930_0024_420362.wav'\n"
+    "group2_record_target_file1 = (\n",
+    "    \"../../dataset/testing/target/0.970_0058_R21_2022_02_23_07_59_47.wav\"\n",
+    ")\n",
+    "group2_record_target_file2 = \"../../dataset/testing/target/0.940_0009_784426.wav\"\n",
+    "group2_record_target_file3 = \"../../dataset/testing/target/0.930_0024_420362.wav\""
    ]
   },
   {
@@ -121,34 +136,37 @@
     "    # Prepare log mel spectrogram from audio\n",
     "    audio_length = tf.shape(resampled_audio)[0]\n",
     "    if audio_length < desired_length:\n",
-    "        audio = tf.pad(audio, [[0, desired_length - audio_length]], mode='CONSTANT')\n",
+    "        audio = tf.pad(audio, [[0, desired_length - audio_length]], mode=\"CONSTANT\")\n",
     "    else:\n",
     "        audio = audio[:desired_length]\n",
-    "    #Create log Mel spectrogram\n",
-    "    stfts = tf.signal.stft(audio, frame_length=1024, frame_step=256,\n",
-    "                        fft_length=1024)\n",
+    "    # Create log Mel spectrogram\n",
+    "    stfts = tf.signal.stft(audio, frame_length=1024, frame_step=256, fft_length=1024)\n",
     "    spectrogram = tf.abs(stfts)\n",
     "    # Warp the linear scale spectrogram into the mel-scale.\n",
     "    num_spectrogram_bins = stfts.shape[-1]\n",
     "    lower_edge_hertz, upper_edge_hertz, num_mel_bins = 80.0, 8000.0, 80\n",
     "    linear_to_mel_weight_matrix = tf.signal.linear_to_mel_weight_matrix(\n",
-    "        num_mel_bins, num_spectrogram_bins, sample_rate, lower_edge_hertz,\n",
-    "        upper_edge_hertz)\n",
-    "    mel_spectrogram = tf.tensordot(\n",
-    "    spectrogram, linear_to_mel_weight_matrix, 1)\n",
-    "    mel_spectrogram.set_shape(spectrogram.shape[:-1].concatenate(\n",
-    "    linear_to_mel_weight_matrix.shape[-1:]))\n",
+    "        num_mel_bins,\n",
+    "        num_spectrogram_bins,\n",
+    "        sample_rate,\n",
+    "        lower_edge_hertz,\n",
+    "        upper_edge_hertz,\n",
+    "    )\n",
+    "    mel_spectrogram = tf.tensordot(spectrogram, linear_to_mel_weight_matrix, 1)\n",
+    "    mel_spectrogram.set_shape(\n",
+    "        spectrogram.shape[:-1].concatenate(linear_to_mel_weight_matrix.shape[-1:])\n",
+    "    )\n",
     "\n",
     "    mel_spectrogram = mel_spectrogram.numpy()\n",
     "    return mel_spectrogram\n",
     "\n",
-    "    \n",
+    "\n",
     "data_points_to_plot = [\n",
-    "                        (group1_record_non_target_file2, \"non target\"),\n",
-    "                        (group1_record_non_target_file3, \"non target\"),\n",
-    "                        (group1_record_target_file3, \"target\"),\n",
-    "                        (group2_record_target_file3, \"target\"),\n",
-    "                        ]\n",
+    "    (group1_record_non_target_file2, \"non target\"),\n",
+    "    (group1_record_non_target_file3, \"non target\"),\n",
+    "    (group1_record_target_file3, \"target\"),\n",
+    "    (group2_record_target_file3, \"target\"),\n",
+    "]\n",
     "\n",
     "fig, axes = plt.subplots(2, 2, figsize=(9, 6))\n",
     "axes = axes.flatten()\n",
@@ -156,12 +174,14 @@
     "for i, data_point in enumerate(data_points_to_plot):\n",
     "    mel_spectr = read_file_and_compute_mel_spectr(data_point[0])\n",
     "    ax = axes[i]\n",
-    "    ax.imshow(np.log(mel_spectr.T + 1e-6), aspect='auto', origin='lower', cmap='viridis')\n",
-    "    ax.set_title(f'{data_point[1]}')\n",
-    "    ax.set_xlabel('Time (frames)')\n",
-    "    ax.set_ylabel('Mel Frequency (bins)')\n",
+    "    ax.imshow(\n",
+    "        np.log(mel_spectr.T + 1e-6), aspect=\"auto\", origin=\"lower\", cmap=\"viridis\"\n",
+    "    )\n",
+    "    ax.set_title(f\"{data_point[1]}\")\n",
+    "    ax.set_xlabel(\"Time (frames)\")\n",
+    "    ax.set_ylabel(\"Mel Frequency (bins)\")\n",
     "\n",
-    "plt.tight_layout() \n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -171,7 +191,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.savefig(\"../../figures/target_non_target_species_spectrograms.pdf\", bbox_inches='tight')"
+    "fig.savefig(\n",
+    "    \"../../figures/target_non_target_species_spectrograms.pdf\", bbox_inches=\"tight\"\n",
+    ")"
    ]
   },
   {
@@ -206,51 +228,51 @@
     "    # Prepare log mel spectrogram from audio\n",
     "    audio_length = tf.shape(resampled_audio)[0]\n",
     "    if audio_length < desired_length:\n",
-    "        audio = tf.pad(audio, [[0, desired_length - audio_length]], mode='CONSTANT')\n",
+    "        audio = tf.pad(audio, [[0, desired_length - audio_length]], mode=\"CONSTANT\")\n",
     "    else:\n",
     "        audio = audio[:desired_length]\n",
-    "    #Create log Mel spectrogram\n",
-    "    stfts = tf.signal.stft(audio, frame_length=1024, frame_step=256,\n",
-    "                        fft_length=1024)\n",
+    "    # Create log Mel spectrogram\n",
+    "    stfts = tf.signal.stft(audio, frame_length=1024, frame_step=256, fft_length=1024)\n",
     "    spectrogram = tf.abs(stfts)\n",
     "    return spectrogram.numpy()\n",
     "\n",
     "\n",
-    "    \n",
     "data_points_to_plot = [\n",
-    "                        # (group1_record_non_target_file2, \"non target\"),\n",
-    "                        # (group1_record_non_target_file3, \"non target\"),\n",
-    "                        (group1_record_target_file1, \"target\"),\n",
-    "                        # (group2_record_target_file3, \"target\"),\n",
-    "                        ]\n",
+    "    # (group1_record_non_target_file2, \"non target\"),\n",
+    "    # (group1_record_non_target_file3, \"non target\"),\n",
+    "    (group1_record_target_file1, \"target\"),\n",
+    "    # (group2_record_target_file3, \"target\"),\n",
+    "]\n",
     "\n",
-    "fig, axes = plt.subplots(1, 3, figsize=(14,4))\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(14, 4))\n",
     "axes = axes.flatten()\n",
     "\n",
     "for i in range(3):\n",
     "    if i == 0:\n",
     "        target_spectr = read_file_and_compute_simple_spectr(data_point[0])\n",
     "        ax = axes[i]\n",
-    "        ax.imshow(target_spectr.T, aspect='auto', origin='lower', cmap='viridis')\n",
+    "        ax.imshow(target_spectr.T, aspect=\"auto\", origin=\"lower\", cmap=\"viridis\")\n",
     "        ax.set_title(\"a) Linear scale\", fontsize=14)\n",
     "    elif i == 1:\n",
     "        target_spectr = read_file_and_compute_mel_spectr(data_point[0])\n",
     "        ax = axes[i]\n",
-    "        ax.imshow(target_spectr.T, aspect='auto', origin='lower', cmap='viridis')\n",
+    "        ax.imshow(target_spectr.T, aspect=\"auto\", origin=\"lower\", cmap=\"viridis\")\n",
     "        ax.set_title(\"b) Mel scale\", fontsize=14)\n",
     "    elif i == 2:\n",
     "        target_spectr = read_file_and_compute_mel_spectr(data_point[0])\n",
     "        ax = axes[i]\n",
-    "        ax.imshow(np.log(target_spectr.T + 1e-6), aspect='auto', origin='lower', cmap='viridis')\n",
+    "        ax.imshow(\n",
+    "            np.log(target_spectr.T + 1e-6),\n",
+    "            aspect=\"auto\",\n",
+    "            origin=\"lower\",\n",
+    "            cmap=\"viridis\",\n",
+    "        )\n",
     "        ax.set_title(\"c) log Mel scale\", fontsize=14)\n",
     "\n",
-    "    \n",
+    "    ax.set_xlabel(\"Time (frames)\", fontsize=12)\n",
+    "    ax.set_ylabel(\"Mel Frequency (bins)\", fontsize=12)\n",
     "\n",
-    "    \n",
-    "    ax.set_xlabel('Time (frames)', fontsize=12)\n",
-    "    ax.set_ylabel('Mel Frequency (bins)', fontsize=12)\n",
-    "\n",
-    "plt.tight_layout() \n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -260,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.savefig(\"../../figures/different_types_of_spectrograms.pdf\", bbox_inches='tight')"
+    "fig.savefig(\"../../figures/different_types_of_spectrograms.pdf\", bbox_inches=\"tight\")"
    ]
   },
   {
