--- a/notebooks/squeezenet/squeezenet30%_time_series_16kHz_baseline.ipynb
+++ b/notebooks/squeezenet/squeezenet30%_time_series_16kHz_baseline.ipynb
@@ -31,22 +31,23 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "from tensorflow import keras\n",
     "import random\n",
+    "\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "\n",
     "tf.random.set_seed(3407)\n",
     "np.random.seed(3407)\n",
     "random.seed(3407)\n",
     "\n",
     "from helper_functions import (\n",
-    "    get_file_size, \n",
-    "    convert_bytes, \n",
+    "    convert_bytes,\n",
     "    convert_prefetchdataset_to_numpy_arrays,\n",
+    "    evaluate_time_of_prediction,\n",
+    "    get_file_size,\n",
     "    predict_and_print_full_results,\n",
-    "    evaluate_time_of_prediction\n",
-    "    )\n",
-    "\n",
+    ")\n",
     "from SqueezeNet_for_time_series import SqueezeNet"
    ]
   },
@@ -97,9 +98,30 @@
     }
    ],
    "source": [
-    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/training\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/testing\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/validation\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
+    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/training\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/testing\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/validation\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
     "\n",
     "label_names = np.array(test_dataset.class_names)\n",
     "print(\"Classes: \", label_names)"
@@ -111,9 +133,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(train_dataset, data_type=\"time-series\")\n",
-    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(val_dataset, data_type=\"time-series\")\n",
-    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(test_dataset, data_type=\"time-series\")"
+    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    train_dataset, data_type=\"time-series\"\n",
+    ")\n",
+    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    val_dataset, data_type=\"time-series\"\n",
+    ")\n",
+    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    test_dataset, data_type=\"time-series\"\n",
+    ")"
    ]
   },
   {
@@ -424,17 +452,16 @@
     }
    ],
    "source": [
-    "model.compile(optimizer='adam',\n",
-    "              loss=keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "              metrics=['accuracy'])\n",
+    "model.compile(\n",
+    "    optimizer=\"adam\",\n",
+    "    loss=keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "    metrics=[\"accuracy\"],\n",
+    ")\n",
     "\n",
     "\n",
     "# EPOCHS = 1\n",
     "EPOCHS = 10\n",
-    "history = model.fit(\n",
-    "    train_dataset,\n",
-    "    epochs=EPOCHS\n",
-    ")"
+    "history = model.fit(train_dataset, epochs=EPOCHS)"
    ]
   },
   {
@@ -479,15 +506,15 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
     ") = predict_and_print_full_results(model, x_val_np, y_val_np, model_format=\"keras\")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
     ") = predict_and_print_full_results(model, x_test_np, y_test_np, model_format=\"keras\")"
    ]
@@ -516,7 +543,9 @@
    ],
    "source": [
     "print(\"For Test dataset:\")\n",
-    "evaluate_time_of_prediction(model, x_test_np, y_test_np, model_format=\"keras\", show_prediction_evaluation=True)\n"
+    "evaluate_time_of_prediction(\n",
+    "    model, x_test_np, y_test_np, model_format=\"keras\", show_prediction_evaluation=True\n",
+    ")"
    ]
   },
   {
@@ -2756,7 +2785,9 @@
     }
    ],
    "source": [
-    "TF_LITE_MODEL_FILE_NAME = \"models_from_notebooks/squeezenet_30%_time_series_sr_48000.tflite\"\n",
+    "TF_LITE_MODEL_FILE_NAME = (\n",
+    "    \"models_from_notebooks/squeezenet_30%_time_series_sr_48000.tflite\"\n",
+    ")\n",
     "tflite_model_name = TF_LITE_MODEL_FILE_NAME\n",
     "open(tflite_model_name, \"wb\").write(tflite_model)\n",
     "convert_bytes(get_file_size(TF_LITE_MODEL_FILE_NAME), \"MB\")"
@@ -5003,11 +5034,15 @@
    ],
    "source": [
     "# 1 - target, 0 - non-target\n",
-    "toy_dataset_ds = tf.keras.utils.audio_dataset_from_directory(\"C:\\\\Users\\\\polin\\\\Bird_song_detection\\\\dataset\\\\diff_length\", labels='inferred', output_sequence_length=length_of_audio)\n",
+    "toy_dataset_ds = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"C:\\\\Users\\\\polin\\\\Bird_song_detection\\\\dataset\\\\diff_length\",\n",
+    "    labels=\"inferred\",\n",
+    "    output_sequence_length=length_of_audio,\n",
+    ")\n",
     "# toy_dataset_spectrograms = create_spectrograms_from_audio_dataset(toy_dataset_ds, sample_rate = sample_rate)\n",
     "x_toy_np, y_toy_np = convert_prefetchdataset_to_numpy_arrays(toy_dataset_ds)\n",
     "\n",
-    "# We take just one point out of two from this toy dataset and predict it \n",
+    "# We take just one point out of two from this toy dataset and predict it\n",
     "x_data = []\n",
     "y_data = []\n",
     "for i in range(len(x_toy_np)):\n",
@@ -5053,17 +5088,17 @@
    "source": [
     "# From validation dataset:\n",
     "files_names = [\n",
-    "               (\"0.920_0005_789668.wav\", 1),\n",
-    "               (\"0.940_0015_139518451.wav\", 1),\n",
-    "               (\"0.950_0027_206237.wav\", 1),\n",
-    "               (\"0.970_0095_127306.wav\", 1),\n",
-    "               (\"0.960_0043_27576.wav\", 1),\n",
-    "               (\"0.920_0015_787431.wav\", 0), # bird\n",
-    "               (\"0.960_0049_203902861.wav\", 0), # bird\n",
-    "               (\"1.000_0001_2I2IzXnhmtc_120.wav\", 0), # cough\n",
-    "               (\"1.000_0002_4vxBWzOWBZU_270.wav\", 0), #speech\n",
-    "               (\"1.000_0003_4jWZLisG5yA_30.wav\", 0), # music\n",
-    "               ]\n",
+    "    (\"0.920_0005_789668.wav\", 1),\n",
+    "    (\"0.940_0015_139518451.wav\", 1),\n",
+    "    (\"0.950_0027_206237.wav\", 1),\n",
+    "    (\"0.970_0095_127306.wav\", 1),\n",
+    "    (\"0.960_0043_27576.wav\", 1),\n",
+    "    (\"0.920_0015_787431.wav\", 0),  # bird\n",
+    "    (\"0.960_0049_203902861.wav\", 0),  # bird\n",
+    "    (\"1.000_0001_2I2IzXnhmtc_120.wav\", 0),  # cough\n",
+    "    (\"1.000_0002_4vxBWzOWBZU_270.wav\", 0),  # speech\n",
+    "    (\"1.000_0003_4jWZLisG5yA_30.wav\", 0),  # music\n",
+    "]\n",
     "file_path = \"C:/Users/polin/Bird_song_detection/dataset/validation/\"\n",
     "\n",
     "\n",
@@ -5078,13 +5113,15 @@
     "    elif file_data[1] == 0:\n",
     "        class_encoded = \"non_target\"\n",
     "\n",
-    "    audio, sr = tf.audio.decode_wav(tf.io.read_file(file_path+class_encoded+\"/\"+file_data[0]))\n",
+    "    audio, sr = tf.audio.decode_wav(\n",
+    "        tf.io.read_file(file_path + class_encoded + \"/\" + file_data[0])\n",
+    "    )\n",
     "    audio_length = tf.shape(audio)[0]\n",
     "    if audio_length < desired_length:\n",
-    "        audio = tf.pad(audio, [[0, desired_length - audio_length]], mode='CONSTANT')\n",
+    "        audio = tf.pad(audio, [[0, desired_length - audio_length]], mode=\"CONSTANT\")\n",
     "    else:\n",
     "        audio = audio[:desired_length]\n",
-    "        \n",
+    "\n",
     "    x_data.append(audio)\n",
     "    y_data.append(file_data[1])\n",
     "\n",
@@ -5094,7 +5131,7 @@
     "if all(x == y for x, y in zip(y_data, y_pred)):\n",
     "    print(\"All data points were predicted correctly!\")\n",
     "else:\n",
-    "    print(\"Prediction was not correct for some points.\")\n"
+    "    print(\"Prediction was not correct for some points.\")"
    ]
   },
   {
@@ -5120,17 +5157,17 @@
    "source": [
     "# From testing dataset:\n",
     "files_names = [\n",
-    "               (\"0.920_0021_R21_2022_02_22_07_34_44.wav\", 1),\n",
-    "               (\"0.930_0008_R21_2022_02_23_09_26_54.wav\", 1),\n",
-    "               (\"0.940_0049_86290.wav\", 1),\n",
-    "               (\"0.950_0097_171265.wav\", 1),\n",
-    "               (\"0.950_0088_324445971.wav\", 1),\n",
-    "               (\"0.920_0019_457390981.wav\", 0), # bird\n",
-    "               (\"0.980_0035_236963.wav\", 0), # bird\n",
-    "               (\"1.000_0001_2t-2M-FoZkQ_0.wav\", 0), # speech and phone call\n",
-    "               (\"1.000_0001_-450EsuQYao_110.wav\", 0), #speech and bird singing on the back ground\n",
-    "               (\"1.000_0002_Bpq3_eIfVQc_30.wav\", 0), # motocycle and dog\n",
-    "               ]\n",
+    "    (\"0.920_0021_R21_2022_02_22_07_34_44.wav\", 1),\n",
+    "    (\"0.930_0008_R21_2022_02_23_09_26_54.wav\", 1),\n",
+    "    (\"0.940_0049_86290.wav\", 1),\n",
+    "    (\"0.950_0097_171265.wav\", 1),\n",
+    "    (\"0.950_0088_324445971.wav\", 1),\n",
+    "    (\"0.920_0019_457390981.wav\", 0),  # bird\n",
+    "    (\"0.980_0035_236963.wav\", 0),  # bird\n",
+    "    (\"1.000_0001_2t-2M-FoZkQ_0.wav\", 0),  # speech and phone call\n",
+    "    (\"1.000_0001_-450EsuQYao_110.wav\", 0),  # speech and bird singing on the back ground\n",
+    "    (\"1.000_0002_Bpq3_eIfVQc_30.wav\", 0),  # motocycle and dog\n",
+    "]\n",
     "file_path = \"C:/Users/polin/Bird_song_detection/dataset/testing/\"\n",
     "\n",
     "\n",
@@ -5145,10 +5182,12 @@
     "    elif file_data[1] == 0:\n",
     "        class_encoded = \"non_target\"\n",
     "\n",
-    "    audio, sr = tf.audio.decode_wav(tf.io.read_file(file_path+class_encoded+\"/\"+file_data[0]))\n",
+    "    audio, sr = tf.audio.decode_wav(\n",
+    "        tf.io.read_file(file_path + class_encoded + \"/\" + file_data[0])\n",
+    "    )\n",
     "    audio_length = tf.shape(audio)[0]\n",
     "    if audio_length < desired_length:\n",
-    "        audio = tf.pad(audio, [[0, desired_length - audio_length]], mode='CONSTANT')\n",
+    "        audio = tf.pad(audio, [[0, desired_length - audio_length]], mode=\"CONSTANT\")\n",
     "    else:\n",
     "        audio = audio[:desired_length]\n",
     "\n",
@@ -5203,7 +5242,7 @@
     }
    ],
    "source": [
-    "file_name = 'C:/Users/polin/Bird_song_detection/dataset/testing/non_target/1.000_0001_-450EsuQYao_110.wav'\n",
+    "file_name = \"C:/Users/polin/Bird_song_detection/dataset/testing/non_target/1.000_0001_-450EsuQYao_110.wav\"\n",
     "class_encoded = 0\n",
     "sample_rate = 48000\n",
     "desired_length = length_of_audio\n",
@@ -5211,7 +5250,7 @@
     "audio, sr = tf.audio.decode_wav(tf.io.read_file(file_name))\n",
     "audio_length = tf.shape(audio)[0]\n",
     "if audio_length < desired_length:\n",
-    "    audio = tf.pad(audio, [[0, desired_length - audio_length]], mode='CONSTANT')\n",
+    "    audio = tf.pad(audio, [[0, desired_length - audio_length]], mode=\"CONSTANT\")\n",
     "else:\n",
     "    audio = audio[:desired_length]\n",
     "\n",
@@ -5242,7 +5281,7 @@
     }
    ],
    "source": [
-    "directory = 'C:/Users/polin/Bird_song_detection/dataset/validation'\n",
+    "directory = \"C:/Users/polin/Bird_song_detection/dataset/validation\"\n",
     "\n",
     "\n",
     "desired_length = length_of_audio\n",
@@ -5262,17 +5301,19 @@
     "\n",
     "        audio, sr = tf.audio.decode_wav(tf.io.read_file(full_file_name))\n",
     "        audio_length = tf.shape(audio)[0]\n",
-    "        audio, _ = squeeze(audio) # we need to squeeze audio to create log mel spectrogram\n",
-    "        \n",
+    "        audio, _ = squeeze(\n",
+    "            audio\n",
+    "        )  # we need to squeeze audio to create log mel spectrogram\n",
+    "\n",
     "        # print(tf.shape(audio))\n",
     "        if audio_length < desired_length:\n",
-    "            audio = tf.pad(audio, [[0, desired_length - audio_length]], mode='CONSTANT')\n",
+    "            audio = tf.pad(audio, [[0, desired_length - audio_length]], mode=\"CONSTANT\")\n",
     "        else:\n",
     "            audio = audio[:desired_length]\n",
-    "        \n",
+    "\n",
     "        # Get back color channel axis to make a prediction\n",
     "        audio_with_color_channel = tf.expand_dims(audio, axis=-1).numpy()\n",
-    "        \n",
+    "\n",
     "        x_data.append(audio_with_color_channel)\n",
     "        y_data.append(class_encoded)\n",
     "\n",
@@ -5447,7 +5488,7 @@
     }
    ],
    "source": [
-    "directory = 'C:/Users/polin/Bird_song_detection/dataset/testing'\n",
+    "directory = \"C:/Users/polin/Bird_song_detection/dataset/testing\"\n",
     "\n",
     "\n",
     "desired_length = length_of_audio\n",
@@ -5467,17 +5508,19 @@
     "\n",
     "        audio, sr = tf.audio.decode_wav(tf.io.read_file(full_file_name))\n",
     "        audio_length = tf.shape(audio)[0]\n",
-    "        audio, _ = squeeze(audio) # we need to squeeze audio to create log mel spectrogram\n",
-    "        \n",
+    "        audio, _ = squeeze(\n",
+    "            audio\n",
+    "        )  # we need to squeeze audio to create log mel spectrogram\n",
+    "\n",
     "        # print(tf.shape(audio))\n",
     "        if audio_length < desired_length:\n",
-    "            audio = tf.pad(audio, [[0, desired_length - audio_length]], mode='CONSTANT')\n",
+    "            audio = tf.pad(audio, [[0, desired_length - audio_length]], mode=\"CONSTANT\")\n",
     "        else:\n",
     "            audio = audio[:desired_length]\n",
-    "        \n",
+    "\n",
     "        # Get back color channel axis to make a prediction\n",
     "        audio_with_color_channel = tf.expand_dims(audio, axis=-1).numpy()\n",
-    "        \n",
+    "\n",
     "        x_data.append(audio_with_color_channel)\n",
     "        y_data.append(class_encoded)\n",
     "\n",
@@ -5666,14 +5709,14 @@
     "    if true_label != pred_label:\n",
     "        print(true_label)\n",
     "        if true_label == 0:\n",
-    "            num_of_false_non_target  += 1\n",
+    "            num_of_false_non_target += 1\n",
     "        elif true_label == 1:\n",
-    "            num_of_false_target  += 1\n",
+    "            num_of_false_target += 1\n",
     "        false_predictions += 1\n",
     "\n",
-    "print('false_predictions', false_predictions)\n",
-    "print('num_of_false_non_target', num_of_false_non_target)\n",
-    "print('num_of_false_target', num_of_false_target)"
+    "print(\"false_predictions\", false_predictions)\n",
+    "print(\"num_of_false_non_target\", num_of_false_non_target)\n",
+    "print(\"num_of_false_target\", num_of_false_target)"
    ]
   },
   {
