--- a/notebooks/squeezenet/squeezenet30%_time_series_16kHz_ptq.ipynb
+++ b/notebooks/squeezenet/squeezenet30%_time_series_16kHz_ptq.ipynb
@@ -31,21 +31,23 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "from tensorflow import keras\n",
     "import random\n",
+    "\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "\n",
     "tf.random.set_seed(3407)\n",
     "np.random.seed(3407)\n",
     "random.seed(3407)\n",
     "\n",
     "from helper_functions_2 import (\n",
-    "    get_file_size, \n",
-    "    convert_bytes, \n",
+    "    convert_bytes,\n",
     "    convert_prefetchdataset_to_numpy_arrays,\n",
+    "    evaluate_time_of_prediction,\n",
+    "    get_file_size,\n",
     "    predict_and_print_full_results,\n",
-    "    evaluate_time_of_prediction\n",
-    "    )"
+    ")"
    ]
   },
   {
@@ -95,9 +97,30 @@
     }
    ],
    "source": [
-    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/training\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/testing\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/validation\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
+    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/training\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/testing\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/validation\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
     "\n",
     "label_names = np.array(test_dataset.class_names)\n",
     "print(\"Classes: \", label_names)"
@@ -109,9 +132,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(train_dataset, data_type=\"time-series\")\n",
-    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(val_dataset, data_type=\"time-series\")\n",
-    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(test_dataset, data_type=\"time-series\")"
+    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    train_dataset, data_type=\"time-series\"\n",
+    ")\n",
+    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    val_dataset, data_type=\"time-series\"\n",
+    ")\n",
+    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    test_dataset, data_type=\"time-series\"\n",
+    ")"
    ]
   },
   {
@@ -359,17 +388,21 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(tflite_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    tflite_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    "    ) = predict_and_print_full_results(tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
     "evaluate_time_of_prediction(tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
@@ -532,20 +565,26 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(dynamic_range_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    dynamic_range_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    "    ) = predict_and_print_full_results(dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
-    "evaluate_time_of_prediction(dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    "evaluate_time_of_prediction(\n",
+    "    dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "DRQ_MODEL_FILE_NAME = \"time_series_models_from_notebooks/squeezenet/squeezenet30%_time_series_16kHz_drq.tflite\"\n",
     "open(DRQ_MODEL_FILE_NAME, \"wb\").write(dynamic_range_quant_model)\n",
@@ -686,20 +725,26 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(float16_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    float16_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    "    ) = predict_and_print_full_results(float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
-    "evaluate_time_of_prediction(float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    "evaluate_time_of_prediction(\n",
+    "    float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "FLOAT16_QUANT_MODEL_FILE_NAME = \"time_series_models_from_notebooks/squeezenet/squeezenet30%_time_series_16kHz_float16q.tflite\"\n",
     "open(FLOAT16_QUANT_MODEL_FILE_NAME, \"wb\").write(float16_quant_model)\n",
@@ -782,9 +827,10 @@
    ],
    "source": [
     "def representative_data_gen():\n",
-    "  for input_value in tf.data.Dataset.from_tensor_slices(x_test_np).batch(1).take(500):\n",
-    "    # Model has only one input so each data point has one element.\n",
-    "    yield [input_value]\n",
+    "    for input_value in tf.data.Dataset.from_tensor_slices(x_test_np).batch(1).take(500):\n",
+    "        # Model has only one input so each data point has one element.\n",
+    "        yield [input_value]\n",
+    "\n",
     "\n",
     "full_int_converter = tf.lite.TFLiteConverter.from_keras_model(baseline_model)\n",
     "full_int_converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
@@ -828,20 +874,38 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(full_int_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\", input_data_uint8_type=True)\n",
+    ") = predict_and_print_full_results(\n",
+    "    full_int_quant_model,\n",
+    "    x_val_np,\n",
+    "    y_val_np,\n",
+    "    model_format=\"tf_lite\",\n",
+    "    input_data_uint8_type=True,\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    "    ) = predict_and_print_full_results(full_int_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\", input_data_uint8_type=True)\n",
+    ") = predict_and_print_full_results(\n",
+    "    full_int_quant_model,\n",
+    "    x_test_np,\n",
+    "    y_test_np,\n",
+    "    model_format=\"tf_lite\",\n",
+    "    input_data_uint8_type=True,\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
-    "evaluate_time_of_prediction(full_int_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\", input_data_uint8_type=True)\n",
+    "evaluate_time_of_prediction(\n",
+    "    full_int_quant_model,\n",
+    "    x_test_np,\n",
+    "    y_test_np,\n",
+    "    model_format=\"tf_lite\",\n",
+    "    input_data_uint8_type=True,\n",
+    ")\n",
     "\n",
     "FULL_INT_QUANT_MODEL_FILE_NAME = \"time_series_models_from_notebooks/squeezenet/squeezenet30%_time_series_16kHz_full_int_q.tflite\"\n",
     "open(FULL_INT_QUANT_MODEL_FILE_NAME, \"wb\").write(full_int_quant_model)\n",
@@ -908,7 +972,9 @@
     }
    ],
    "source": [
-    "float_fallback_quant_converter = tf.lite.TFLiteConverter.from_keras_model(baseline_model)\n",
+    "float_fallback_quant_converter = tf.lite.TFLiteConverter.from_keras_model(\n",
+    "    baseline_model\n",
+    ")\n",
     "float_fallback_quant_converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
     "float_fallback_quant_converter.representative_dataset = representative_data_gen\n",
     "float_fallback_quant_model = float_fallback_quant_converter.convert()"
@@ -1005,20 +1071,26 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(float_fallback_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    float_fallback_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    "    ) = predict_and_print_full_results(float_fallback_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    float_fallback_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
-    "evaluate_time_of_prediction(float_fallback_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    "evaluate_time_of_prediction(\n",
+    "    float_fallback_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "FLOAT_FALLBACK_QUANT_MODEL_FILE_NAME = \"time_series_models_from_notebooks/squeezenet/squeezenet30%_time_series_16kHz_float_fallback_q.tflite\"\n",
     "open(FLOAT_FALLBACK_QUANT_MODEL_FILE_NAME, \"wb\").write(float_fallback_quant_model)\n",
