--- a/notebooks/squeezenet/squeezenet_spec_16kHz_ptq.ipynb
+++ b/notebooks/squeezenet/squeezenet_spec_16kHz_ptq.ipynb
@@ -25,32 +25,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
+    "import random\n",
     "import time\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
     "# from tensorflow_model_optimization.python.core.keras.compat import keras\n",
     "from tensorflow import keras\n",
-    "import matplotlib.pyplot as plt\n",
-    "import random\n",
+    "\n",
     "tf.random.set_seed(3407)\n",
     "np.random.seed(3407)\n",
     "random.seed(3407)\n",
     "\n",
-    "from thesis.create_spectrogram import (\n",
-    "    create_spectrograms_from_audio_dataset, \n",
-    ")\n",
+    "from thesis.create_spectrogram import create_spectrograms_from_audio_dataset\n",
     "from thesis.helper_functions import (\n",
-    "    evaluate_prediction,\n",
-    "    get_file_size, \n",
-    "    convert_bytes, \n",
+    "    convert_bytes,\n",
     "    convert_prefetchdataset_to_numpy_arrays,\n",
-    "    predict_and_print_full_results,\n",
+    "    evaluate_prediction,\n",
     "    evaluate_time_of_prediction,\n",
+    "    find_decision_threshold,\n",
     "    full_int_model_predict,\n",
-    "    get_f1_scores_of_non_overlapping_partitions_full_int_q,\n",
     "    get_f1_scores_of_bootstraping_partitions_full_int_q,\n",
-    "    find_decision_threshold\n",
-    "    )"
+    "    get_f1_scores_of_non_overlapping_partitions_full_int_q,\n",
+    "    get_file_size,\n",
+    "    predict_and_print_full_results,\n",
+    ")"
    ]
   },
   {
@@ -82,9 +83,30 @@
     }
    ],
    "source": [
-    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/training\", labels='inferred', sampling_rate=sample_rate, batch_size=32, shuffle=True, seed=3407)\n",
-    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/testing\", labels='inferred', sampling_rate=sample_rate, batch_size=32, shuffle=True, seed=3407)\n",
-    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/validation\", labels='inferred', sampling_rate=sample_rate, batch_size=32, shuffle=True, seed=3407)\n",
+    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/training\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=sample_rate,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/testing\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=sample_rate,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/validation\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=sample_rate,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
     "\n",
     "label_names = np.array(test_dataset.class_names)\n",
     "print(\"Classes: \", label_names)"
@@ -96,9 +118,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_spectrogram_ds = create_spectrograms_from_audio_dataset(train_dataset, sample_rate = sample_rate).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "test_spectrogram_ds = create_spectrograms_from_audio_dataset(test_dataset, sample_rate = sample_rate).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "val_spectrogram_ds = create_spectrograms_from_audio_dataset(val_dataset, sample_rate = sample_rate).cache().prefetch(tf.data.AUTOTUNE)\n",
+    "train_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(train_dataset, sample_rate=sample_rate)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "test_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(test_dataset, sample_rate=sample_rate)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "val_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(val_dataset, sample_rate=sample_rate)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
     "\n",
     "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(train_spectrogram_ds)\n",
     "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(val_spectrogram_ds)\n",
@@ -111,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models_thresholds_and_metrics = {\"SqueezeNet-Mel\":{}}"
+    "models_thresholds_and_metrics = {\"SqueezeNet-Mel\": {}}"
    ]
   },
   {
@@ -226,7 +260,9 @@
     }
    ],
    "source": [
-    "BASE_MODEL_FILE_NAME = \"spectrogram_models_from_notebooks/squeezenet/squeezenet_spec_16kHz_baseline.keras\"\n",
+    "BASE_MODEL_FILE_NAME = (\n",
+    "    \"spectrogram_models_from_notebooks/squeezenet/squeezenet_spec_16kHz_baseline.keras\"\n",
+    ")\n",
     "baseline_model = keras.models.load_model(BASE_MODEL_FILE_NAME)\n",
     "baseline_model.summary()\n",
     "convert_bytes(get_file_size(BASE_MODEL_FILE_NAME), \"KB\")"
@@ -267,18 +303,22 @@
     "(\n",
     "    threshold,\n",
     "    y_pred_val,\n",
-    "    _, \n",
-    "    # non_overlap_patritions_f1_scores_test, \n",
+    "    _,\n",
+    "    # non_overlap_patritions_f1_scores_test,\n",
     "    # bootstrap_patritions_f1_scores_test,\n",
-    ") = predict_and_print_full_results(baseline_model, x_val_np, y_val_np, model_format=\"keras\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    baseline_model, x_val_np, y_val_np, model_format=\"keras\"\n",
+    ")\n",
     "\n",
     "(\n",
     "    _,\n",
     "    y_pred_test,\n",
-    "    metrics_dict, \n",
-    "    # non_overlap_patritions_f1_scores_test, \n",
+    "    metrics_dict,\n",
+    "    # non_overlap_patritions_f1_scores_test,\n",
     "    # bootstrap_patritions_f1_scores_test,\n",
-    ") = predict_and_print_full_results(baseline_model, x_test_np, y_test_np, model_format=\"keras\", threshold=threshold)"
+    ") = predict_and_print_full_results(\n",
+    "    baseline_model, x_test_np, y_test_np, model_format=\"keras\", threshold=threshold\n",
+    ")"
    ]
   },
   {
@@ -303,7 +343,10 @@
     }
    ],
    "source": [
-    "models_thresholds_and_metrics[\"SqueezeNet-Mel\"][\"baseline\"] = {\"threshold\": str(threshold), **metrics_dict}\n",
+    "models_thresholds_and_metrics[\"SqueezeNet-Mel\"][\"baseline\"] = {\n",
+    "    \"threshold\": str(threshold),\n",
+    "    **metrics_dict,\n",
+    "}\n",
     "models_thresholds_and_metrics"
    ]
   },
@@ -407,20 +450,26 @@
     "(\n",
     "    threshold,\n",
     "    y_pred_val,\n",
-    "    _, \n",
-    "    ) = predict_and_print_full_results(tflite_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    "    _,\n",
+    ") = predict_and_print_full_results(\n",
+    "    tflite_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
     "    _,\n",
     "    y_pred_test,\n",
-    "    metrics_dict, \n",
-    "    ) = predict_and_print_full_results(tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\", threshold=threshold)\n",
+    "    metrics_dict,\n",
+    ") = predict_and_print_full_results(\n",
+    "    tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\", threshold=threshold\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
     "evaluate_time_of_prediction(tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
     "\n",
-    "TF_LITE_MODEL_FILE_NAME = \"spectrogram_models_from_notebooks/squeezenet/squeezenet_spec_16kHz.tflite\"\n",
+    "TF_LITE_MODEL_FILE_NAME = (\n",
+    "    \"spectrogram_models_from_notebooks/squeezenet/squeezenet_spec_16kHz.tflite\"\n",
+    ")\n",
     "open(TF_LITE_MODEL_FILE_NAME, \"wb\").write(tflite_model)\n",
     "print(\"\\n\")\n",
     "print(\"Model file name: \", TF_LITE_MODEL_FILE_NAME)\n",
@@ -455,7 +504,10 @@
     }
    ],
    "source": [
-    "models_thresholds_and_metrics[\"SqueezeNet-Mel\"][\"tflite\"] = {\"threshold\": str(threshold), **metrics_dict}\n",
+    "models_thresholds_and_metrics[\"SqueezeNet-Mel\"][\"tflite\"] = {\n",
+    "    \"threshold\": str(threshold),\n",
+    "    **metrics_dict,\n",
+    "}\n",
     "models_thresholds_and_metrics"
    ]
   },
@@ -578,20 +630,32 @@
     "(\n",
     "    threshold,\n",
     "    y_pred_val,\n",
-    "    _, \n",
-    "    ) = predict_and_print_full_results(dynamic_range_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    "    _,\n",
+    ") = predict_and_print_full_results(\n",
+    "    dynamic_range_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
     "    _,\n",
     "    y_pred_test,\n",
-    "    metrics_dict, \n",
-    "    ) = predict_and_print_full_results(dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\", threshold=threshold)\n",
+    "    metrics_dict,\n",
+    ") = predict_and_print_full_results(\n",
+    "    dynamic_range_quant_model,\n",
+    "    x_test_np,\n",
+    "    y_test_np,\n",
+    "    model_format=\"tf_lite\",\n",
+    "    threshold=threshold,\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
-    "evaluate_time_of_prediction(dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    "evaluate_time_of_prediction(\n",
+    "    dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
-    "DRQ_MODEL_FILE_NAME = \"spectrogram_models_from_notebooks/squeezenet/squeezenet_spec_16kHz_drq.tflite\"\n",
+    "DRQ_MODEL_FILE_NAME = (\n",
+    "    \"spectrogram_models_from_notebooks/squeezenet/squeezenet_spec_16kHz_drq.tflite\"\n",
+    ")\n",
     "open(DRQ_MODEL_FILE_NAME, \"wb\").write(dynamic_range_quant_model)\n",
     "print(\"\\n\")\n",
     "print(\"Model file name: \", DRQ_MODEL_FILE_NAME)\n",
@@ -632,7 +696,10 @@
     }
    ],
    "source": [
-    "models_thresholds_and_metrics[\"SqueezeNet-Mel\"][\"DRQ\"] = {\"threshold\": str(threshold), **metrics_dict}\n",
+    "models_thresholds_and_metrics[\"SqueezeNet-Mel\"][\"DRQ\"] = {\n",
+    "    \"threshold\": str(threshold),\n",
+    "    **metrics_dict,\n",
+    "}\n",
     "models_thresholds_and_metrics"
    ]
   },
@@ -739,20 +806,32 @@
     "(\n",
     "    threshold,\n",
     "    y_pred_val,\n",
-    "    _, \n",
-    "    ) = predict_and_print_full_results(float16_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    "    _,\n",
+    ") = predict_and_print_full_results(\n",
+    "    float16_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
     "    _,\n",
     "    y_pred_test,\n",
-    "    metrics_dict, \n",
-    "    ) = predict_and_print_full_results(float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\", threshold=threshold)\n",
+    "    metrics_dict,\n",
+    ") = predict_and_print_full_results(\n",
+    "    float16_quant_model,\n",
+    "    x_test_np,\n",
+    "    y_test_np,\n",
+    "    model_format=\"tf_lite\",\n",
+    "    threshold=threshold,\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
-    "evaluate_time_of_prediction(float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    "evaluate_time_of_prediction(\n",
+    "    float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
-    "FLOAT16_QUANT_MODEL_FILE_NAME = \"spectrogram_models_from_notebooks/squeezenet/squeezenet_spec_16kHz_float16q.tflite\"\n",
+    "FLOAT16_QUANT_MODEL_FILE_NAME = (\n",
+    "    \"spectrogram_models_from_notebooks/squeezenet/squeezenet_spec_16kHz_float16q.tflite\"\n",
+    ")\n",
     "open(FLOAT16_QUANT_MODEL_FILE_NAME, \"wb\").write(float16_quant_model)\n",
     "print(\"\\n\")\n",
     "print(\"Model file name: \", FLOAT16_QUANT_MODEL_FILE_NAME)\n",
@@ -799,7 +878,10 @@
     }
    ],
    "source": [
-    "models_thresholds_and_metrics[\"SqueezeNet-Mel\"][\"float16\"] = {\"threshold\": str(threshold), **metrics_dict}\n",
+    "models_thresholds_and_metrics[\"SqueezeNet-Mel\"][\"float16\"] = {\n",
+    "    \"threshold\": str(threshold),\n",
+    "    **metrics_dict,\n",
+    "}\n",
     "models_thresholds_and_metrics"
    ]
   },
@@ -875,10 +957,13 @@
    ],
    "source": [
     "def representative_data_gen():\n",
-    "  for input_value in tf.data.Dataset.from_tensor_slices(x_val_np).batch(1).take(100):\n",
-    "    yield [input_value]\n",
-    "    \n",
-    "float_fallback_quant_converter = tf.lite.TFLiteConverter.from_keras_model(baseline_model)\n",
+    "    for input_value in tf.data.Dataset.from_tensor_slices(x_val_np).batch(1).take(100):\n",
+    "        yield [input_value]\n",
+    "\n",
+    "\n",
+    "float_fallback_quant_converter = tf.lite.TFLiteConverter.from_keras_model(\n",
+    "    baseline_model\n",
+    ")\n",
     "float_fallback_quant_converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
     "float_fallback_quant_converter.representative_dataset = representative_data_gen\n",
     "float_fallback_quant_model = float_fallback_quant_converter.convert()"
@@ -929,18 +1014,28 @@
     "(\n",
     "    threshold,\n",
     "    y_pred_val,\n",
-    "    _, \n",
-    "    ) = predict_and_print_full_results(float_fallback_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    "    _,\n",
+    ") = predict_and_print_full_results(\n",
+    "    float_fallback_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
     "    _,\n",
     "    y_pred_test,\n",
-    "    metrics_dict, \n",
-    "    ) = predict_and_print_full_results(float_fallback_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\", threshold=threshold)\n",
+    "    metrics_dict,\n",
+    ") = predict_and_print_full_results(\n",
+    "    float_fallback_quant_model,\n",
+    "    x_test_np,\n",
+    "    y_test_np,\n",
+    "    model_format=\"tf_lite\",\n",
+    "    threshold=threshold,\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
-    "evaluate_time_of_prediction(float_fallback_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    "evaluate_time_of_prediction(\n",
+    "    float_fallback_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "FLOAT_FALLBACK_QUANT_MODEL_FILE_NAME = \"spectrogram_models_from_notebooks/squeezenet/squeezenet_spec_16kHz_float_fallback_q.tflite\"\n",
     "open(FLOAT_FALLBACK_QUANT_MODEL_FILE_NAME, \"wb\").write(float_fallback_quant_model)\n",
@@ -1012,7 +1107,10 @@
     }
    ],
    "source": [
-    "models_thresholds_and_metrics[\"SqueezeNet-Mel\"][\"float_fallback\"] = {\"threshold\": str(threshold), **metrics_dict}\n",
+    "models_thresholds_and_metrics[\"SqueezeNet-Mel\"][\"float_fallback\"] = {\n",
+    "    \"threshold\": str(threshold),\n",
+    "    **metrics_dict,\n",
+    "}\n",
     "models_thresholds_and_metrics"
    ]
   },
@@ -1078,8 +1176,9 @@
    ],
    "source": [
     "def representative_data_gen():\n",
-    "  for input_value in tf.data.Dataset.from_tensor_slices(x_val_np).batch(1).take(100):\n",
-    "    yield [input_value]\n",
+    "    for input_value in tf.data.Dataset.from_tensor_slices(x_val_np).batch(1).take(100):\n",
+    "        yield [input_value]\n",
+    "\n",
     "\n",
     "full_int_converter = tf.lite.TFLiteConverter.from_keras_model(baseline_model)\n",
     "full_int_converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
@@ -1109,10 +1208,10 @@
    ],
    "source": [
     "interpreter = tf.lite.Interpreter(model_content=tflite_model_quant)\n",
-    "input_type = interpreter.get_input_details()[0]['dtype']\n",
-    "print('input: ', input_type)\n",
-    "output_type = interpreter.get_output_details()[0]['dtype']\n",
-    "print('output: ', output_type)"
+    "input_type = interpreter.get_input_details()[0][\"dtype\"]\n",
+    "print(\"input: \", input_type)\n",
+    "output_type = interpreter.get_output_details()[0][\"dtype\"]\n",
+    "print(\"output: \", output_type)"
    ]
   },
   {
@@ -1138,7 +1237,7 @@
     "tflite_models_dir.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "# Save the quantized model:\n",
-    "tflite_model_quant_file = tflite_models_dir/\"squeezenet_spec_16kHz_full_int_q.tflite\"\n",
+    "tflite_model_quant_file = tflite_models_dir / \"squeezenet_spec_16kHz_full_int_q.tflite\"\n",
     "tflite_model_quant_file.write_bytes(tflite_model_quant)"
    ]
   },
@@ -1183,7 +1282,9 @@
     "predictions = full_int_model_predict(tflite_model_quant_file, x_val_np)\n",
     "threshold = find_decision_threshold(y_val_np, predictions, model_format=\"tflite\")\n",
     "print(threshold)\n",
-    "_ = evaluate_prediction(y_val_np, predictions, model_format=\"tflite\", optimal_threshold=threshold)\n",
+    "_ = evaluate_prediction(\n",
+    "    y_val_np, predictions, model_format=\"tflite\", optimal_threshold=threshold\n",
+    ")\n",
     "\n",
     "# print(\"\\nDevide dataset into 10 non-overlapping patritions and get their mean F1-score\")\n",
     "# non_overlap_patritions_f1_scores = get_f1_scores_of_non_overlapping_partitions_full_int_q(tflite_model_full_int_file, x_val_np, y_val_np)\n",
@@ -1194,10 +1295,11 @@
     "# print(\"Bootstrap mean F1-score: \", np.mean(bootstrap_patritions_f1_scores))\n",
     "\n",
     "\n",
-    "\n",
     "print(\"\\nTest dataset:\")\n",
     "predictions = full_int_model_predict(tflite_model_quant_file, x_test_np)\n",
-    "metrics_dict = evaluate_prediction(y_test_np, predictions, model_format=\"tflite\", optimal_threshold=threshold)\n",
+    "metrics_dict = evaluate_prediction(\n",
+    "    y_test_np, predictions, model_format=\"tflite\", optimal_threshold=threshold\n",
+    ")\n",
     "\n",
     "# print(\"\\nDevide dataset into 10 non-overlapping patritions and get their mean F1-score\")\n",
     "# non_overlap_patritions_f1_scores = get_f1_scores_of_non_overlapping_partitions_full_int_q(tflite_model_full_int_file, x_test_np, y_test_np)\n",
@@ -1274,7 +1376,10 @@
     }
    ],
    "source": [
-    "models_thresholds_and_metrics[\"SqueezeNet-Mel\"][\"full int\"] = {\"threshold\": str(threshold), **metrics_dict}\n",
+    "models_thresholds_and_metrics[\"SqueezeNet-Mel\"][\"full int\"] = {\n",
+    "    \"threshold\": str(threshold),\n",
+    "    **metrics_dict,\n",
+    "}\n",
     "models_thresholds_and_metrics"
    ]
   },
@@ -1284,8 +1389,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -1406,7 +1512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('thesis/thresholds_and_metrics_json/squeezenet_mel.json', 'w') as f:\n",
+    "with open(\"thesis/thresholds_and_metrics_json/squeezenet_mel.json\", \"w\") as f:\n",
     "    json.dump(models_thresholds_and_metrics, f)"
    ]
   },
