--- a/notebooks/transformer/tiny_transformer_mel_spec_hpo.ipynb
+++ b/notebooks/transformer/tiny_transformer_mel_spec_hpo.ipynb
@@ -42,30 +42,28 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "from tensorflow import keras\n",
-    "import matplotlib.pyplot as plt\n",
+    "import random\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
     "from keras_tuner import HyperModel\n",
     "from keras_tuner.tuners import RandomSearch\n",
+    "from tensorflow import keras\n",
     "\n",
-    "import random\n",
     "tf.random.set_seed(3407)\n",
     "np.random.seed(3407)\n",
     "random.seed(3407)\n",
     "\n",
-    "from create_spectrogram import (\n",
-    "    create_spectrograms_from_audio_dataset, \n",
-    ")\n",
+    "from create_spectrogram import create_spectrograms_from_audio_dataset\n",
     "from helper_functions import (\n",
-    "    evaluate_prediction,\n",
-    "    get_file_size, \n",
-    "    convert_bytes, \n",
+    "    convert_bytes,\n",
     "    convert_prefetchdataset_to_numpy_arrays,\n",
-    "    predict_and_print_full_results,\n",
+    "    evaluate_prediction,\n",
     "    evaluate_time_of_prediction,\n",
-    "    )"
+    "    get_file_size,\n",
+    "    predict_and_print_full_results,\n",
+    ")"
    ]
   },
   {
@@ -88,9 +86,30 @@
     }
    ],
    "source": [
-    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/training\", labels='inferred', sampling_rate=16000, batch_size=12, shuffle=True, seed=3407)\n",
-    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/testing\", labels='inferred', sampling_rate=16000, batch_size=12, shuffle=True, seed=3407)\n",
-    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/validation\", labels='inferred', sampling_rate=16000, batch_size=12, shuffle=True, seed=3407)\n",
+    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/training\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=12,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/testing\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=12,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/validation\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=12,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
     "\n",
     "label_names = np.array(train_dataset.class_names)\n",
     "print(\"Classes: \", label_names)"
@@ -102,9 +121,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_spectrogram_ds = create_spectrograms_from_audio_dataset(train_dataset, sample_rate = 16000).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "test_spectrogram_ds = create_spectrograms_from_audio_dataset(test_dataset, sample_rate = 16000).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "val_spectrogram_ds = create_spectrograms_from_audio_dataset(val_dataset, sample_rate = 16000).cache().prefetch(tf.data.AUTOTUNE)\n",
+    "train_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(train_dataset, sample_rate=16000)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "test_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(test_dataset, sample_rate=16000)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "val_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(val_dataset, sample_rate=16000)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
     "\n",
     "# x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(train_spectrogram_ds)\n",
     "# x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(val_spectrogram_ds)\n",
@@ -163,8 +194,8 @@
     "        plt.figure(figsize=(10, 6))\n",
     "        plt.pcolormesh(X, Y, spectrogram)\n",
     "        plt.title(i[1][0])\n",
-    "        plt.xlabel('Time (s)')\n",
-    "        plt.ylabel('Frequency (Hz)')\n",
+    "        plt.xlabel(\"Time (s)\")\n",
+    "        plt.ylabel(\"Frequency (Hz)\")\n",
     "        plt.show()\n",
     "        break"
    ]
@@ -250,7 +281,9 @@
     "def transformer_encoder(inputs, head_size, num_heads, ff_dim, dropout=0):\n",
     "    # Normalization and Attention\n",
     "    x = layers.LayerNormalization(epsilon=1e-6)(inputs)\n",
-    "    x = layers.MultiHeadAttention(key_dim=head_size, num_heads=num_heads, dropout=dropout)(x, x)\n",
+    "    x = layers.MultiHeadAttention(\n",
+    "        key_dim=head_size, num_heads=num_heads, dropout=dropout\n",
+    "    )(x, x)\n",
     "    x = layers.Dropout(dropout)(x)\n",
     "    res = x + inputs\n",
     "\n",
@@ -261,7 +294,10 @@
     "    x = layers.Conv2D(filters=inputs.shape[-1], kernel_size=1)(x)\n",
     "    return x + res\n",
     "\n",
-    "def build_model(input_shape, head_size, num_heads, ff_dim, num_blocks, num_classes, dropout=0):\n",
+    "\n",
+    "def build_model(\n",
+    "    input_shape, head_size, num_heads, ff_dim, num_blocks, num_classes, dropout=0\n",
+    "):\n",
     "    inputs = layers.Input(shape=input_shape)\n",
     "    x = layers.Conv2D(filters=8, kernel_size=(1, 1), activation=\"relu\")(inputs)\n",
     "    x = layers.MaxPooling2D(pool_size=2)(x)\n",
@@ -275,6 +311,7 @@
     "    outputs = layers.Dense(num_classes, activation=\"softmax\")(x)\n",
     "    return models.Model(inputs, outputs)\n",
     "\n",
+    "\n",
     "# Parameters\n",
     "input_shape = (184, 80, 1)\n",
     "head_size = 64\n",
@@ -285,8 +322,14 @@
     "dropout = 0.1\n",
     "\n",
     "# Build the model\n",
-    "model = build_model(input_shape, head_size, num_heads, ff_dim, num_blocks, num_classes, dropout)\n",
-    "model.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True), optimizer=tf.keras.optimizers.Adam(learning_rate=0.001), metrics=[\"accuracy\"])\n",
+    "model = build_model(\n",
+    "    input_shape, head_size, num_heads, ff_dim, num_blocks, num_classes, dropout\n",
+    ")\n",
+    "model.compile(\n",
+    "    loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "    optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    "    metrics=[\"accuracy\"],\n",
+    ")\n",
     "\n",
     "# Model summary\n",
     "model.summary()"
@@ -315,20 +358,22 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
     ") = predict_and_print_full_results(model, x_val_np, y_val_np, model_format=\"keras\")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
     ") = predict_and_print_full_results(model, x_test_np, y_test_np, model_format=\"keras\")\n",
     "\n",
     "print(\"Time of one prediction for Test dataset:\")\n",
-    "evaluate_time_of_prediction(model, x_test_np, y_test_np, model_format=\"keras\", show_prediction_evaluation=True)\n"
+    "evaluate_time_of_prediction(\n",
+    "    model, x_test_np, y_test_np, model_format=\"keras\", show_prediction_evaluation=True\n",
+    ")"
    ]
   }
  ],
