--- a/notebooks/transformer/tiny_transformer_time_ser_hpo.ipynb
+++ b/notebooks/transformer/tiny_transformer_time_ser_hpo.ipynb
@@ -31,26 +31,26 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "from tensorflow.keras import layers, models\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from keras_tuner import HyperModel\n",
-    "from keras_tuner.tuners import RandomSearch, Hyperband, BayesianOptimization\n",
-    "\n",
     "import random\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from keras_tuner import HyperModel\n",
+    "from keras_tuner.tuners import BayesianOptimization, Hyperband, RandomSearch\n",
+    "from tensorflow.keras import layers, models\n",
+    "\n",
     "tf.random.set_seed(3407)\n",
     "np.random.seed(3407)\n",
     "random.seed(3407)\n",
     "\n",
     "from helper_functions import (\n",
-    "    get_file_size, \n",
-    "    convert_bytes, \n",
+    "    convert_bytes,\n",
     "    convert_prefetchdataset_to_numpy_arrays,\n",
+    "    evaluate_time_of_prediction,\n",
+    "    get_file_size,\n",
     "    predict_and_print_full_results,\n",
-    "    evaluate_time_of_prediction\n",
-    "    )"
+    ")"
    ]
   },
   {
@@ -87,9 +87,30 @@
     }
    ],
    "source": [
-    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/training\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/testing\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/validation\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
+    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/training\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/testing\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/validation\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
     "\n",
     "label_names = np.array(train_dataset.class_names)\n",
     "print(\"Classes: \", label_names)"
@@ -101,9 +122,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(train_dataset, data_type=\"time-series\")\n",
-    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(val_dataset, data_type=\"time-series\")\n",
-    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(test_dataset, data_type=\"time-series\")"
+    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    train_dataset, data_type=\"time-series\"\n",
+    ")\n",
+    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    val_dataset, data_type=\"time-series\"\n",
+    ")\n",
+    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    test_dataset, data_type=\"time-series\"\n",
+    ")"
    ]
   },
   {
@@ -134,36 +161,48 @@
     "        self.num_classes = num_classes\n",
     "        self.num_blocks = num_blocks\n",
     "\n",
-    "    def transformer_encoder(self, inputs, head_size, num_heads, filters_conv, kernel_size, dropout=0):\n",
+    "    def transformer_encoder(\n",
+    "        self, inputs, head_size, num_heads, filters_conv, kernel_size, dropout=0\n",
+    "    ):\n",
     "        # Normalization and Attention\n",
     "        x = layers.LayerNormalization(epsilon=1e-6)(inputs)\n",
-    "        x = layers.MultiHeadAttention(key_dim=head_size, num_heads=num_heads, dropout=dropout)(x, x)\n",
+    "        x = layers.MultiHeadAttention(\n",
+    "            key_dim=head_size, num_heads=num_heads, dropout=dropout\n",
+    "        )(x, x)\n",
     "        x = layers.Dropout(dropout)(x)\n",
     "        res = x + inputs\n",
     "\n",
     "        # Feed Forward Part\n",
     "        x = layers.LayerNormalization(epsilon=1e-6)(res)\n",
-    "        x = layers.Conv1D(filters=filters_conv, kernel_size=kernel_size, activation=\"relu\")(x)\n",
+    "        x = layers.Conv1D(\n",
+    "            filters=filters_conv, kernel_size=kernel_size, activation=\"relu\"\n",
+    "        )(x)\n",
     "        x = layers.Dropout(dropout)(x)\n",
     "        x = layers.Conv1D(filters=inputs.shape[-1], kernel_size=1)(x)\n",
     "        return x + res\n",
     "\n",
     "    def build(self, hp, dropout=0):\n",
     "        inputs = layers.Input(shape=self.input_shape)\n",
-    "        \n",
-    "        # Parameters\n",
-    "        filters_conv = hp.Int('filters', min_value=2, max_value=12, step=2)\n",
-    "        # kernel_size = hp.Choice('kernel_size', values=[1, 3])\n",
-    "        pool_size = hp.Int('pool_size', min_value=6, max_value=10, step=2)\n",
-    "        num_heads = hp.Choice('num_heads', values=[1, 2, 3])\n",
-    "        learning_rate = hp.Float('learning_rate', min_value=1e-4, max_value=1e-2, sampling='log')\n",
     "\n",
-    "        x = layers.Conv1D(filters=filters_conv, kernel_size=1, activation=\"relu\")(inputs)\n",
+    "        # Parameters\n",
+    "        filters_conv = hp.Int(\"filters\", min_value=2, max_value=12, step=2)\n",
+    "        # kernel_size = hp.Choice('kernel_size', values=[1, 3])\n",
+    "        pool_size = hp.Int(\"pool_size\", min_value=6, max_value=10, step=2)\n",
+    "        num_heads = hp.Choice(\"num_heads\", values=[1, 2, 3])\n",
+    "        learning_rate = hp.Float(\n",
+    "            \"learning_rate\", min_value=1e-4, max_value=1e-2, sampling=\"log\"\n",
+    "        )\n",
+    "\n",
+    "        x = layers.Conv1D(filters=filters_conv, kernel_size=1, activation=\"relu\")(\n",
+    "            inputs\n",
+    "        )\n",
     "        x = layers.MaxPooling1D(pool_size=pool_size)(x)\n",
     "        x = layers.AveragePooling1D(pool_size=pool_size)(x)\n",
     "        for i in range(self.num_blocks):\n",
-    "            head_size = hp.Int(f'head_size_{i}', min_value=4, max_value=16, step=4)\n",
-    "            x = self.transformer_encoder(x, head_size, num_heads, filters_conv, 1, dropout)\n",
+    "            head_size = hp.Int(f\"head_size_{i}\", min_value=4, max_value=16, step=4)\n",
+    "            x = self.transformer_encoder(\n",
+    "                x, head_size, num_heads, filters_conv, 1, dropout\n",
+    "            )\n",
     "\n",
     "        x = layers.GlobalAveragePooling1D()(x)\n",
     "        x = layers.Dropout(dropout)(x)\n",
@@ -173,7 +212,7 @@
     "        model.compile(\n",
     "            optimizer=tf.keras.optimizers.Adam(learning_rate=learning_rate),\n",
     "            loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "            metrics=['accuracy']\n",
+    "            metrics=[\"accuracy\"],\n",
     "        )\n",
     "        return model"
    ]
@@ -245,18 +284,18 @@
     }
    ],
    "source": [
-    "input_shape = (48000,1)\n",
+    "input_shape = (48000, 1)\n",
     "num_classes = 2\n",
     "num_blocks = 1\n",
     "\n",
     "num_of_conv_layers = 1\n",
     "tuner_1_block_transformer = RandomSearch(\n",
     "    TransformerHyperModel(input_shape, num_classes, num_blocks),\n",
-    "    objective='val_accuracy',\n",
+    "    objective=\"val_accuracy\",\n",
     "    max_trials=5,\n",
     "    executions_per_trial=1,\n",
-    "    directory='../hpo_tuner/tiny_transformer',\n",
-    "    project_name='tiny_transformer_time_series_1_block_tuning'\n",
+    "    directory=\"../hpo_tuner/tiny_transformer\",\n",
+    "    project_name=\"tiny_transformer_time_series_1_block_tuning\",\n",
     ")\n",
     "tuner_1_block_transformer.search(train_dataset, epochs=3, validation_data=val_dataset)\n",
     "tuner_1_block_transformer.results_summary()"
@@ -334,18 +373,18 @@
     }
    ],
    "source": [
-    "input_shape = (48000,1)\n",
+    "input_shape = (48000, 1)\n",
     "num_classes = 2\n",
     "num_blocks = 2\n",
     "\n",
     "num_of_conv_layers = 1\n",
     "tuner_2_block_transformer = RandomSearch(\n",
     "    TransformerHyperModel(input_shape, num_classes, num_blocks),\n",
-    "    objective='val_accuracy',\n",
+    "    objective=\"val_accuracy\",\n",
     "    max_trials=5,\n",
     "    executions_per_trial=1,\n",
-    "    directory='../hpo_tuner/tiny_transformer',\n",
-    "    project_name='tiny_transformer_time_series_2_block_tuning'\n",
+    "    directory=\"../hpo_tuner/tiny_transformer\",\n",
+    "    project_name=\"tiny_transformer_time_series_2_block_tuning\",\n",
     ")\n",
     "tuner_2_block_transformer.search(train_dataset, epochs=3, validation_data=val_dataset)\n",
     "tuner_2_block_transformer.results_summary()"
@@ -492,7 +531,9 @@
     "def transformer_encoder(inputs, head_size, num_heads, filters, dropout=0):\n",
     "    # Normalization and Attention\n",
     "    x = layers.LayerNormalization(epsilon=1e-6)(inputs)\n",
-    "    x = layers.MultiHeadAttention(key_dim=head_size, num_heads=num_heads, dropout=dropout)(x, x)\n",
+    "    x = layers.MultiHeadAttention(\n",
+    "        key_dim=head_size, num_heads=num_heads, dropout=dropout\n",
+    "    )(x, x)\n",
     "    x = layers.Dropout(dropout)(x)\n",
     "    res = x + inputs\n",
     "\n",
@@ -503,9 +544,12 @@
     "    x = layers.Conv1D(filters=inputs.shape[-1], kernel_size=1)(x)\n",
     "    return x + res\n",
     "\n",
-    "def build_model(input_shape, head_size, num_heads, filters, num_blocks, num_classes, dropout=0):\n",
+    "\n",
+    "def build_model(\n",
+    "    input_shape, head_size, num_heads, filters, num_blocks, num_classes, dropout=0\n",
+    "):\n",
     "    inputs = layers.Input(shape=input_shape)\n",
-    "    \n",
+    "\n",
     "    x = layers.Conv1D(filters=filters, kernel_size=1, activation=\"relu\")(inputs)\n",
     "    x = layers.MaxPooling1D(pool_size=8)(x)\n",
     "    x = layers.AveragePooling1D(pool_size=8)(x)\n",
@@ -517,31 +561,33 @@
     "    outputs = layers.Dense(num_classes, activation=\"softmax\")(x)\n",
     "    return keras.Model(inputs, outputs)\n",
     "\n",
+    "\n",
     "# Parameters\n",
-    "input_shape = (48000,1)\n",
+    "input_shape = (48000, 1)\n",
     "num_classes = 2\n",
     "num_blocks = 1\n",
     "\n",
-    "head_size = 8 # 16\n",
+    "head_size = 8  # 16\n",
     "num_heads = 2\n",
     "filters = 12\n",
     "dropout = 0.1\n",
     "\n",
     "# Build the model\n",
-    "model_2_10_epochs = build_model(input_shape, head_size, num_heads, filters, num_blocks, num_classes, dropout)\n",
-    "model_2_10_epochs.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True), \n",
-    "                          optimizer=tf.keras.optimizers.Adam(learning_rate=0.001), \n",
-    "                          metrics=[\"accuracy\"])\n",
+    "model_2_10_epochs = build_model(\n",
+    "    input_shape, head_size, num_heads, filters, num_blocks, num_classes, dropout\n",
+    ")\n",
+    "model_2_10_epochs.compile(\n",
+    "    loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "    optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    "    metrics=[\"accuracy\"],\n",
+    ")\n",
     "\n",
     "# Model summary\n",
     "model_2_10_epochs.summary()\n",
     "\n",
     "# EPOCHS = 1\n",
     "EPOCHS = 10\n",
-    "history = model_2_10_epochs.fit(\n",
-    "    train_dataset,\n",
-    "    epochs=EPOCHS\n",
-    ")"
+    "history = model_2_10_epochs.fit(train_dataset, epochs=EPOCHS)"
    ]
   },
   {
@@ -611,10 +657,12 @@
     "\n",
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    ") = predict_and_print_full_results(model_2_10_epochs, x_val_np, y_val_np, model_format=\"keras\")"
+    ") = predict_and_print_full_results(\n",
+    "    model_2_10_epochs, x_val_np, y_val_np, model_format=\"keras\"\n",
+    ")"
    ]
   },
   {
@@ -709,7 +757,9 @@
     "def transformer_encoder(inputs, head_size, num_heads, ff_dim, dropout=0):\n",
     "    # Normalization and Attention\n",
     "    x = layers.LayerNormalization(epsilon=1e-6)(inputs)\n",
-    "    x = layers.MultiHeadAttention(key_dim=head_size, num_heads=num_heads, dropout=dropout)(x, x)\n",
+    "    x = layers.MultiHeadAttention(\n",
+    "        key_dim=head_size, num_heads=num_heads, dropout=dropout\n",
+    "    )(x, x)\n",
     "    x = layers.Dropout(dropout)(x)\n",
     "    res = x + inputs\n",
     "\n",
@@ -720,7 +770,10 @@
     "    x = layers.Conv1D(filters=inputs.shape[-1], kernel_size=1)(x)\n",
     "    return x + res\n",
     "\n",
-    "def build_model(input_shape, head_size, num_heads, ff_dim, num_blocks, num_classes, dropout=0):\n",
+    "\n",
+    "def build_model(\n",
+    "    input_shape, head_size, num_heads, ff_dim, num_blocks, num_classes, dropout=0\n",
+    "):\n",
     "    inputs = layers.Input(shape=input_shape)\n",
     "    x = layers.Conv1D(filters=ff_dim, kernel_size=5, activation=\"relu\")(inputs)\n",
     "    x = layers.MaxPooling1D(pool_size=16)(x)\n",
@@ -734,18 +787,25 @@
     "    outputs = layers.Dense(num_classes, activation=\"softmax\")(x)\n",
     "    return models.Model(inputs, outputs)\n",
     "\n",
+    "\n",
     "# Parameters\n",
-    "input_shape = (48000,1)\n",
-    "head_size = 32 \n",
-    "num_heads = 1 # 2\n",
-    "ff_dim = 32 # 32\n",
+    "input_shape = (48000, 1)\n",
+    "head_size = 32\n",
+    "num_heads = 1  # 2\n",
+    "ff_dim = 32  # 32\n",
     "num_blocks = 1\n",
     "num_classes = 2\n",
     "dropout = 0.1\n",
     "\n",
     "# Build the model\n",
-    "model_lr = build_model(input_shape, head_size, num_heads, ff_dim, num_blocks, num_classes, dropout)\n",
-    "model_lr.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True), optimizer=tf.keras.optimizers.Adam(learning_rate=2e-5), metrics=[\"accuracy\"])\n",
+    "model_lr = build_model(\n",
+    "    input_shape, head_size, num_heads, ff_dim, num_blocks, num_classes, dropout\n",
+    ")\n",
+    "model_lr.compile(\n",
+    "    loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "    optimizer=tf.keras.optimizers.Adam(learning_rate=2e-5),\n",
+    "    metrics=[\"accuracy\"],\n",
+    ")\n",
     "\n",
     "# Model summary\n",
     "model_lr.summary()"
@@ -851,20 +911,26 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
     ") = predict_and_print_full_results(model_lr, x_val_np, y_val_np, model_format=\"keras\")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
     ") = predict_and_print_full_results(model_lr, x_test_np, y_test_np, model_format=\"keras\")\n",
     "\n",
     "print(\"Time of one prediction for Test dataset:\")\n",
-    "evaluate_time_of_prediction(model_lr, x_test_np, y_test_np, model_format=\"keras\", show_prediction_evaluation=True)\n"
+    "evaluate_time_of_prediction(\n",
+    "    model_lr,\n",
+    "    x_test_np,\n",
+    "    y_test_np,\n",
+    "    model_format=\"keras\",\n",
+    "    show_prediction_evaluation=True,\n",
+    ")"
    ]
   },
   {
