--- a/notebooks/transformer/vit_mel_spec_baseline.ipynb
+++ b/notebooks/transformer/vit_mel_spec_baseline.ipynb
@@ -25,35 +25,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import tensorflow as tf\n",
-    "\n",
-    "from tensorflow.keras import layers\n",
-    "\n",
     "from keras_tuner import HyperModel\n",
     "from keras_tuner.tuners import RandomSearch\n",
     "\n",
-    "from vit_for_tflite_compartible import create_vit_classifier, PatchEncoder\n",
-    "\n",
-    "import numpy as np\n",
     "# from tensorflow_model_optimization.python.core.keras.compat import keras\n",
     "from tensorflow import keras\n",
-    "import matplotlib.pyplot as plt\n",
-    "import random\n",
+    "from tensorflow.keras import layers\n",
+    "from vit_for_tflite_compartible import PatchEncoder, create_vit_classifier\n",
+    "\n",
     "tf.random.set_seed(3407)\n",
     "np.random.seed(3407)\n",
     "random.seed(3407)\n",
     "\n",
     "from create_spectrogram import (\n",
-    "    create_spectrograms_from_audio_dataset, \n",
-    "    extract_patches_from_audio_dataset\n",
+    "    create_spectrograms_from_audio_dataset,\n",
+    "    extract_patches_from_audio_dataset,\n",
     ")\n",
     "from helper_functions_2 import (\n",
-    "    get_file_size, \n",
-    "    convert_bytes, \n",
+    "    convert_bytes,\n",
     "    convert_prefetchdataset_to_numpy_arrays,\n",
-    "    predict_and_print_full_results,\n",
     "    evaluate_time_of_prediction,\n",
-    "    )\n"
+    "    get_file_size,\n",
+    "    predict_and_print_full_results,\n",
+    ")"
    ]
   },
   {
@@ -76,9 +75,30 @@
     }
    ],
    "source": [
-    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/training\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/testing\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/validation\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
+    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/training\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/testing\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/validation\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
     "\n",
     "label_names = np.array(train_dataset.class_names)\n",
     "print(\"Classes: \", label_names)"
@@ -90,9 +110,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_spectrogram_ds = create_spectrograms_from_audio_dataset(train_dataset, sample_rate = 16000).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "test_spectrogram_ds = create_spectrograms_from_audio_dataset(test_dataset, sample_rate = 16000).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "val_spectrogram_ds = create_spectrograms_from_audio_dataset(val_dataset, sample_rate = 16000).cache().prefetch(tf.data.AUTOTUNE)\n",
+    "train_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(train_dataset, sample_rate=16000)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "test_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(test_dataset, sample_rate=16000)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "val_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(val_dataset, sample_rate=16000)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
     "\n",
     "# x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(train_spectrogram_ds)\n",
     "# x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(val_spectrogram_ds)\n",
@@ -105,13 +137,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_patches_ds = extract_patches_from_audio_dataset(train_dataset, sample_rate = 16000, patch_size=8).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "test_patches_ds = extract_patches_from_audio_dataset(test_dataset, sample_rate = 16000, patch_size=8).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "val_patches_ds = extract_patches_from_audio_dataset(val_dataset, sample_rate = 16000, patch_size=8).cache().prefetch(tf.data.AUTOTUNE)\n",
+    "train_patches_ds = (\n",
+    "    extract_patches_from_audio_dataset(train_dataset, sample_rate=16000, patch_size=8)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "test_patches_ds = (\n",
+    "    extract_patches_from_audio_dataset(test_dataset, sample_rate=16000, patch_size=8)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "val_patches_ds = (\n",
+    "    extract_patches_from_audio_dataset(val_dataset, sample_rate=16000, patch_size=8)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
     "\n",
-    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(train_patches_ds, data_type=\"not spectrogram\")\n",
-    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(test_patches_ds, data_type=\"not spectrogram\")\n",
-    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(val_patches_ds, data_type=\"not spectrogram\")"
+    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    train_patches_ds, data_type=\"not spectrogram\"\n",
+    ")\n",
+    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    test_patches_ds, data_type=\"not spectrogram\"\n",
+    ")\n",
+    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    val_patches_ds, data_type=\"not spectrogram\"\n",
+    ")"
    ]
   },
   {
@@ -729,11 +779,11 @@
     }
    ],
    "source": [
-    "input_shape = (23, 10, 64)  \n",
-    "# input_shape = (46, 20, 16)  \n",
-    "num_classes = 2  \n",
+    "input_shape = (23, 10, 64)\n",
+    "# input_shape = (46, 20, 16)\n",
+    "num_classes = 2\n",
     "patch_size = 8\n",
-    "num_patches = (184 // patch_size) * (80 // patch_size) # 230\n",
+    "num_patches = (184 // patch_size) * (80 // patch_size)  # 230\n",
     "num_patches"
    ]
   },
@@ -814,10 +864,10 @@
    ],
    "source": [
     "input_shape = (23, 10, 64)\n",
-    "# input_shape = (46, 20, 16)  \n",
-    "num_classes = 2  \n",
+    "# input_shape = (46, 20, 16)\n",
+    "num_classes = 2\n",
     "patch_size = 8\n",
-    "num_patches = (184 // patch_size) * (80 // patch_size) # 230\n",
+    "num_patches = (184 // patch_size) * (80 // patch_size)  # 230\n",
     "\n",
     "projection_dim = 8  # Size of embedding hpo # Less was tested - not successfull\n",
     "num_heads = 4  # Number of attention heads hpo\n",
@@ -825,13 +875,23 @@
     "mlp_head_units = [16, 8]  # Multi-Layer Perceptron head units\n",
     "transformer_units = [projection_dim * 2, projection_dim]\n",
     "\n",
-    "vit_classifier = create_vit_classifier(input_shape, num_classes, patch_size, num_patches, projection_dim, num_heads, transformer_layers, transformer_units, mlp_head_units)\n",
+    "vit_classifier = create_vit_classifier(\n",
+    "    input_shape,\n",
+    "    num_classes,\n",
+    "    patch_size,\n",
+    "    num_patches,\n",
+    "    projection_dim,\n",
+    "    num_heads,\n",
+    "    transformer_layers,\n",
+    "    transformer_units,\n",
+    "    mlp_head_units,\n",
+    ")\n",
     "vit_classifier.summary()\n",
     "vit_classifier.compile(\n",
-    "            optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
-    "            loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "            metrics=['accuracy']\n",
-    "        )"
+    "    optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    "    loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "    metrics=[\"accuracy\"],\n",
+    ")"
    ]
   },
   {
@@ -946,20 +1006,30 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    ") = predict_and_print_full_results(vit_classifier, x_val_np, y_val_np, model_format=\"keras\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    vit_classifier, x_val_np, y_val_np, model_format=\"keras\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    ") = predict_and_print_full_results(vit_classifier, x_test_np, y_test_np, model_format=\"keras\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    vit_classifier, x_test_np, y_test_np, model_format=\"keras\"\n",
+    ")\n",
     "\n",
     "print(\"Time of one prediction for Test dataset:\")\n",
-    "evaluate_time_of_prediction(vit_classifier, x_test_np, y_test_np, model_format=\"keras\", show_prediction_evaluation=True)\n"
+    "evaluate_time_of_prediction(\n",
+    "    vit_classifier,\n",
+    "    x_test_np,\n",
+    "    y_test_np,\n",
+    "    model_format=\"keras\",\n",
+    "    show_prediction_evaluation=True,\n",
+    ")"
    ]
   },
   {
@@ -977,7 +1047,9 @@
     }
    ],
    "source": [
-    "MODEL_FILE_NAME = \"../spectrogram_models_from_notebooks/vit/hpo/vit_mel_spec_final.keras\"\n",
+    "MODEL_FILE_NAME = (\n",
+    "    \"../spectrogram_models_from_notebooks/vit/hpo/vit_mel_spec_final.keras\"\n",
+    ")\n",
     "vit_classifier.save(MODEL_FILE_NAME)\n",
     "print(\"Model file name: \", MODEL_FILE_NAME)\n",
     "convert_bytes(get_file_size(MODEL_FILE_NAME), \"MB\")"
@@ -1001,7 +1073,9 @@
     }
    ],
    "source": [
-    "model_loaded = tf.keras.models.load_model(MODEL_FILE_NAME, compile=True, custom_objects={ \"PatchEncoder\": PatchEncoder})\n"
+    "model_loaded = tf.keras.models.load_model(\n",
+    "    MODEL_FILE_NAME, compile=True, custom_objects={\"PatchEncoder\": PatchEncoder}\n",
+    ")"
    ]
   },
   {
