--- a/notebooks/transformer/vit_mel_spec_qat.ipynb
+++ b/notebooks/transformer/vit_mel_spec_qat.ipynb
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "# import tensorflow_io\n",
-    "from tensorflow_model_optimization.python.core.keras.compat import keras\n"
+    "from tensorflow_model_optimization.python.core.keras.compat import keras"
    ]
   },
   {
@@ -99,27 +99,26 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
+    "import sys\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "# from tensorflow_model_optimization.python.core.keras.compat import keras\n",
     "# import tensorflow_model_optimization as tfmot\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf\n",
     "\n",
-    "import sys \n",
-    "sys.path.append(\"C:/Users/polin/TinyBirdSounds\") \n",
+    "sys.path.append(\"C:/Users/polin/TinyBirdSounds\")\n",
     "\n",
-    "from vit_for_tflite_compartible import PatchEncoder\n",
-    "\n",
-    "from create_spectrogram import (\n",
-    "    extract_patches_from_audio_dataset, \n",
-    ")\n",
+    "from create_spectrogram import extract_patches_from_audio_dataset\n",
     "from helper_functions import (\n",
-    "    get_file_size, \n",
-    "    convert_bytes, \n",
+    "    convert_bytes,\n",
     "    convert_prefetchdataset_to_numpy_arrays,\n",
+    "    evaluate_time_of_prediction,\n",
+    "    get_file_size,\n",
     "    predict_and_print_full_results,\n",
-    "    evaluate_time_of_prediction\n",
-    "    )"
+    ")\n",
+    "from vit_for_tflite_compartible import PatchEncoder"
    ]
   },
   {
@@ -160,9 +159,30 @@
     }
    ],
    "source": [
-    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/training\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=42)\n",
-    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/testing\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=42)\n",
-    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/validation\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=42)\n"
+    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/training\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=42,\n",
+    ")\n",
+    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/testing\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=42,\n",
+    ")\n",
+    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/validation\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=42,\n",
+    ")"
    ]
   },
   {
@@ -180,13 +200,31 @@
     }
    ],
    "source": [
-    "train_patches_ds = extract_patches_from_audio_dataset(train_dataset, sample_rate = 16000, patch_size=8).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "test_patches_ds = extract_patches_from_audio_dataset(test_dataset, sample_rate = 16000, patch_size=8).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "val_patches_ds = extract_patches_from_audio_dataset(val_dataset, sample_rate = 16000, patch_size=8).cache().prefetch(tf.data.AUTOTUNE)\n",
+    "train_patches_ds = (\n",
+    "    extract_patches_from_audio_dataset(train_dataset, sample_rate=16000, patch_size=8)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "test_patches_ds = (\n",
+    "    extract_patches_from_audio_dataset(test_dataset, sample_rate=16000, patch_size=8)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "val_patches_ds = (\n",
+    "    extract_patches_from_audio_dataset(val_dataset, sample_rate=16000, patch_size=8)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
     "\n",
-    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(train_patches_ds, data_type=\"not spectrogram\")\n",
-    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(test_patches_ds, data_type=\"not spectrogram\")\n",
-    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(val_patches_ds, data_type=\"not spectrogram\")"
+    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    train_patches_ds, data_type=\"not spectrogram\"\n",
+    ")\n",
+    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    test_patches_ds, data_type=\"not spectrogram\"\n",
+    ")\n",
+    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    val_patches_ds, data_type=\"not spectrogram\"\n",
+    ")"
    ]
   },
   {
@@ -234,8 +272,12 @@
     }
    ],
    "source": [
-    "BASE_MODEL_FILE_NAME = \"../spectrogram_models_from_notebooks/vit/hpo/vit_mel_spec_final.keras\"\n",
-    "base_model = keras.models.load_model(BASE_MODEL_FILE_NAME, compile=True, custom_objects={ \"PatchEncoder\": PatchEncoder})\n",
+    "BASE_MODEL_FILE_NAME = (\n",
+    "    \"../spectrogram_models_from_notebooks/vit/hpo/vit_mel_spec_final.keras\"\n",
+    ")\n",
+    "base_model = keras.models.load_model(\n",
+    "    BASE_MODEL_FILE_NAME, compile=True, custom_objects={\"PatchEncoder\": PatchEncoder}\n",
+    ")\n",
     "base_model.summary()\n",
     "convert_bytes(get_file_size(BASE_MODEL_FILE_NAME), \"MB\")"
    ]
@@ -292,9 +334,11 @@
     "q_aware_model = quantize_model(base_model)\n",
     "\n",
     "# `quantize_model` requires a recompile.\n",
-    "q_aware_model.compile(optimizer='adam',\n",
-    "              loss=keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "              metrics=['accuracy'])\n",
+    "q_aware_model.compile(\n",
+    "    optimizer=\"adam\",\n",
+    "    loss=keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "    metrics=[\"accuracy\"],\n",
+    ")\n",
     "\n",
     "q_aware_model.summary()"
    ]
@@ -331,8 +375,9 @@
     }
    ],
    "source": [
-    "q_aware_model.fit(x_train_np[:500], y_train_np[:500],\n",
-    "                  batch_size=32, epochs=1, validation_split=0.1)"
+    "q_aware_model.fit(\n",
+    "    x_train_np[:500], y_train_np[:500], batch_size=32, epochs=1, validation_split=0.1\n",
+    ")"
    ]
   },
   {
@@ -350,14 +395,12 @@
     }
    ],
    "source": [
-    "_, baseline_model_accuracy = base_model.evaluate(\n",
-    "    x_test_np, y_test_np, verbose=0)\n",
+    "_, baseline_model_accuracy = base_model.evaluate(x_test_np, y_test_np, verbose=0)\n",
     "\n",
-    "_, q_aware_model_accuracy = q_aware_model.evaluate(\n",
-    "   x_test_np, y_test_np, verbose=0)\n",
+    "_, q_aware_model_accuracy = q_aware_model.evaluate(x_test_np, y_test_np, verbose=0)\n",
     "\n",
-    "print('Baseline test accuracy:', baseline_model_accuracy)\n",
-    "print('Quant test accuracy:', q_aware_model_accuracy)"
+    "print(\"Baseline test accuracy:\", baseline_model_accuracy)\n",
+    "print(\"Quant test accuracy:\", q_aware_model_accuracy)"
    ]
   },
   {
@@ -453,17 +496,21 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(quantized_tflite_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    quantized_tflite_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    "    ) = predict_and_print_full_results(quantized_tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\")"
+    ") = predict_and_print_full_results(\n",
+    "    quantized_tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")"
    ]
   },
   {
@@ -490,7 +537,9 @@
    ],
    "source": [
     "print(\"For Test dataset:\")\n",
-    "evaluate_time_of_prediction(quantized_tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\")"
+    "evaluate_time_of_prediction(\n",
+    "    quantized_tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")"
    ]
   },
   {
@@ -509,7 +558,9 @@
    ],
    "source": [
     "# Save model and print its size\n",
-    "QAT_MODEL_FILE_NAME = \"../spectrogram_models_from_notebooks/cnn/quantized/cnn_mel_speq_qat.tflite\"\n",
+    "QAT_MODEL_FILE_NAME = (\n",
+    "    \"../spectrogram_models_from_notebooks/cnn/quantized/cnn_mel_speq_qat.tflite\"\n",
+    ")\n",
     "open(QAT_MODEL_FILE_NAME, \"wb\").write(quantized_tflite_model)\n",
     "print(\"Model file name: \", QAT_MODEL_FILE_NAME)\n",
     "convert_bytes(get_file_size(QAT_MODEL_FILE_NAME), \"KB\")"
