--- a/notebooks/squeezenet/squeezenet_spec_16kHz_baseline.ipynb
+++ b/notebooks/squeezenet/squeezenet_spec_16kHz_baseline.ipynb
@@ -25,28 +25,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
+    "import random\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
     "# from tensorflow_model_optimization.python.core.keras.compat import keras\n",
     "from tensorflow import keras\n",
-    "import matplotlib.pyplot as plt\n",
-    "import random\n",
+    "\n",
     "tf.random.set_seed(3407)\n",
     "np.random.seed(3407)\n",
     "random.seed(3407)\n",
     "\n",
     "\n",
     "from create_spectrogram_and_time_series_dataset_use import (\n",
-    "    create_spectrograms_from_audio_dataset, \n",
+    "    create_spectrograms_from_audio_dataset,\n",
     ")\n",
     "from helper_functions import (\n",
-    "    get_file_size, \n",
-    "    convert_bytes, \n",
+    "    convert_bytes,\n",
     "    convert_prefetchdataset_to_numpy_arrays,\n",
+    "    evaluate_time_of_prediction,\n",
+    "    get_file_size,\n",
     "    predict_and_print_full_results,\n",
-    "    evaluate_time_of_prediction\n",
-    "    )\n",
-    "\n",
+    ")\n",
     "from SqueezeNet import SqueezeNet"
    ]
   },
@@ -97,9 +99,30 @@
     }
    ],
    "source": [
-    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/training\", labels='inferred', sampling_rate=sample_rate, batch_size=32, shuffle=True, seed=3407)\n",
-    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/testing\", labels='inferred', sampling_rate=sample_rate, batch_size=32, shuffle=True, seed=3407)\n",
-    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/validation\", labels='inferred', sampling_rate=sample_rate, batch_size=32, shuffle=True, seed=3407)\n",
+    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/training\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=sample_rate,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/testing\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=sample_rate,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/validation\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=sample_rate,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
     "\n",
     "label_names = np.array(test_dataset.class_names)\n",
     "print(\"Classes: \", label_names)"
@@ -111,9 +134,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_spectrogram_ds = create_spectrograms_from_audio_dataset(train_dataset, sample_rate = sample_rate).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "test_spectrogram_ds = create_spectrograms_from_audio_dataset(test_dataset, sample_rate = sample_rate).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "val_spectrogram_ds = create_spectrograms_from_audio_dataset(val_dataset, sample_rate = sample_rate).cache().prefetch(tf.data.AUTOTUNE)\n",
+    "train_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(train_dataset, sample_rate=sample_rate)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "test_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(test_dataset, sample_rate=sample_rate)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "val_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(val_dataset, sample_rate=sample_rate)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
     "\n",
     "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(train_spectrogram_ds)\n",
     "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(val_spectrogram_ds)\n",
@@ -268,17 +303,16 @@
     "model = SqueezeNet(input_shape=(184, 80, 1), nb_classes=2)\n",
     "model.summary()\n",
     "\n",
-    "model.compile(optimizer='adam',\n",
-    "              loss=keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "              metrics=['accuracy'])\n",
+    "model.compile(\n",
+    "    optimizer=\"adam\",\n",
+    "    loss=keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "    metrics=[\"accuracy\"],\n",
+    ")\n",
     "\n",
     "\n",
     "# EPOCHS = 1\n",
     "EPOCHS = 10\n",
-    "history = model.fit(\n",
-    "    train_spectrogram_ds,\n",
-    "    epochs=EPOCHS\n",
-    ")"
+    "history = model.fit(train_spectrogram_ds, epochs=EPOCHS)"
    ]
   },
   {
@@ -323,17 +357,17 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
     ") = predict_and_print_full_results(model, x_val_np, y_val_np, model_format=\"keras\")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    ") = predict_and_print_full_results(model, x_test_np, y_test_np, model_format=\"keras\")\n"
+    ") = predict_and_print_full_results(model, x_test_np, y_test_np, model_format=\"keras\")"
    ]
   },
   {
@@ -360,7 +394,9 @@
    ],
    "source": [
     "print(\"For Test dataset:\")\n",
-    "evaluate_time_of_prediction(model, x_test_np, y_test_np, model_format=\"keras\", show_prediction_evaluation=True)\n"
+    "evaluate_time_of_prediction(\n",
+    "    model, x_test_np, y_test_np, model_format=\"keras\", show_prediction_evaluation=True\n",
+    ")"
    ]
   },
   {
@@ -389,7 +425,9 @@
     }
    ],
    "source": [
-    "BASE_MODEL_FILE_NAME = \"spectrogram_models_from_notebooks/squeezenet/squeezenet_spec_16kHz_baseline.keras\"\n",
+    "BASE_MODEL_FILE_NAME = (\n",
+    "    \"spectrogram_models_from_notebooks/squeezenet/squeezenet_spec_16kHz_baseline.keras\"\n",
+    ")\n",
     "keras.models.save_model(model, BASE_MODEL_FILE_NAME, save_format=\"keras\")\n",
     "print(\"Model file name: \", BASE_MODEL_FILE_NAME)\n",
     "convert_bytes(get_file_size(BASE_MODEL_FILE_NAME), \"KB\")"
