--- a/notebooks/squeezenet/squeezenet_spectrogram_16kHz_full_int_q.ipynb
+++ b/notebooks/squeezenet/squeezenet_spectrogram_16kHz_full_int_q.ipynb
@@ -31,29 +31,31 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "from tensorflow import keras\n",
-    "from sklearn.metrics import f1_score\n",
-    "import time\n",
     "import random\n",
+    "import time\n",
+    "\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from sklearn.metrics import f1_score\n",
+    "from tensorflow import keras\n",
+    "\n",
     "tf.random.set_seed(3407)\n",
     "np.random.seed(3407)\n",
     "random.seed(3407)\n",
     "\n",
     "from create_spectrogram_and_time_series_dataset_use import (\n",
-    "    create_spectrograms_from_audio_dataset, \n",
+    "    create_spectrograms_from_audio_dataset,\n",
     ")\n",
     "from helper_functions import (\n",
-    "    evaluate_prediction,\n",
-    "    get_file_size, \n",
-    "    convert_bytes, \n",
+    "    convert_bytes,\n",
     "    convert_prefetchdataset_to_numpy_arrays,\n",
-    "    predict_and_print_full_results,\n",
+    "    evaluate_prediction,\n",
     "    full_int_model_predict,\n",
-    "    get_f1_scores_of_non_overlapping_partitions_full_int_q,\n",
     "    get_f1_scores_of_bootstraping_partitions_full_int_q,\n",
-    "    )"
+    "    get_f1_scores_of_non_overlapping_partitions_full_int_q,\n",
+    "    get_file_size,\n",
+    "    predict_and_print_full_results,\n",
+    ")"
    ]
   },
   {
@@ -103,9 +105,30 @@
     }
    ],
    "source": [
-    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/training\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/testing\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\"dataset/validation\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
+    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/training\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/testing\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"dataset/validation\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
     "\n",
     "label_names = np.array(test_dataset.class_names)\n",
     "print(\"Classes: \", label_names)"
@@ -117,9 +140,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_spectrogram_ds = create_spectrograms_from_audio_dataset(train_dataset, sample_rate = sample_rate).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "test_spectrogram_ds = create_spectrograms_from_audio_dataset(test_dataset, sample_rate = sample_rate).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "val_spectrogram_ds = create_spectrograms_from_audio_dataset(val_dataset, sample_rate = sample_rate).cache().prefetch(tf.data.AUTOTUNE)\n",
+    "train_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(train_dataset, sample_rate=sample_rate)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "test_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(test_dataset, sample_rate=sample_rate)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "val_spectrogram_ds = (\n",
+    "    create_spectrograms_from_audio_dataset(val_dataset, sample_rate=sample_rate)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
     "\n",
     "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(train_spectrogram_ds)\n",
     "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(val_spectrogram_ds)\n",
@@ -238,7 +273,9 @@
     }
    ],
    "source": [
-    "BASE_MODEL_FILE_NAME = \"spectrogram_models_from_notebooks/squeezenet/squeezenet_spec_16kHz_baseline.keras\"\n",
+    "BASE_MODEL_FILE_NAME = (\n",
+    "    \"spectrogram_models_from_notebooks/squeezenet/squeezenet_spec_16kHz_baseline.keras\"\n",
+    ")\n",
     "baseline_model = tf.keras.models.load_model(BASE_MODEL_FILE_NAME)\n",
     "baseline_model.summary()\n",
     "convert_bytes(get_file_size(BASE_MODEL_FILE_NAME), \"MB\")"
@@ -286,17 +323,21 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    ") = predict_and_print_full_results(baseline_model, x_val_np, y_val_np, model_format=\"keras\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    baseline_model, x_val_np, y_val_np, model_format=\"keras\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    ") = predict_and_print_full_results(baseline_model, x_test_np, y_test_np, model_format=\"keras\")"
+    ") = predict_and_print_full_results(\n",
+    "    baseline_model, x_test_np, y_test_np, model_format=\"keras\"\n",
+    ")"
    ]
   },
   {
@@ -306,10 +347,11 @@
    "outputs": [],
    "source": [
     "import logging\n",
+    "\n",
     "logging.getLogger(\"tensorflow\").setLevel(logging.DEBUG)\n",
     "\n",
-    "import tensorflow as tf\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import tensorflow as tf"
    ]
   },
   {
@@ -328,8 +370,7 @@
    "source": [
     "for i in x_val_np:\n",
     "    print(i.shape)\n",
-    "    break\n",
-    "    "
+    "    break"
    ]
   },
   {
@@ -382,8 +423,9 @@
    ],
    "source": [
     "def representative_data_gen():\n",
-    "  for input_value in tf.data.Dataset.from_tensor_slices(x_val_np).batch(1).take(100):\n",
-    "    yield [input_value]\n",
+    "    for input_value in tf.data.Dataset.from_tensor_slices(x_val_np).batch(1).take(100):\n",
+    "        yield [input_value]\n",
+    "\n",
     "\n",
     "full_int_converter = tf.lite.TFLiteConverter.from_keras_model(baseline_model)\n",
     "full_int_converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
@@ -413,10 +455,10 @@
    ],
    "source": [
     "interpreter = tf.lite.Interpreter(model_content=tflite_model_quant)\n",
-    "input_type = interpreter.get_input_details()[0]['dtype']\n",
-    "print('input: ', input_type)\n",
-    "output_type = interpreter.get_output_details()[0]['dtype']\n",
-    "print('output: ', output_type)"
+    "input_type = interpreter.get_input_details()[0][\"dtype\"]\n",
+    "print(\"input: \", input_type)\n",
+    "output_type = interpreter.get_output_details()[0][\"dtype\"]\n",
+    "print(\"output: \", output_type)"
    ]
   },
   {
@@ -442,7 +484,7 @@
     "tflite_models_dir.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "# Save the quantized model:\n",
-    "tflite_model_quant_file = tflite_models_dir/\"squeezenet_spec_16kHz_full_int_q.tflite\"\n",
+    "tflite_model_quant_file = tflite_models_dir / \"squeezenet_spec_16kHz_full_int_q.tflite\"\n",
     "tflite_model_quant_file.write_bytes(tflite_model_quant)"
    ]
   },
@@ -508,13 +550,20 @@
     "evaluate_prediction(y_val_np, predictions)\n",
     "\n",
     "print(\"\\nDevide dataset into 10 non-overlapping patritions and get their mean F1-score\")\n",
-    "non_overlap_patritions_f1_scores = get_f1_scores_of_non_overlapping_partitions_full_int_q(tflite_model_quant_file, x_val_np, y_val_np)\n",
+    "non_overlap_patritions_f1_scores = (\n",
+    "    get_f1_scores_of_non_overlapping_partitions_full_int_q(\n",
+    "        tflite_model_quant_file, x_val_np, y_val_np\n",
+    "    )\n",
+    ")\n",
     "print(\"Non-overlap mean F1-score: \", np.mean(non_overlap_patritions_f1_scores))\n",
     "\n",
-    "print(\"\\nGet 100 bootstrap samples from dataset with 100 samples each and get their mean F1-score\")\n",
-    "bootstrap_patritions_f1_scores = get_f1_scores_of_bootstraping_partitions_full_int_q(tflite_model_quant_file, x_val_np, y_val_np)\n",
+    "print(\n",
+    "    \"\\nGet 100 bootstrap samples from dataset with 100 samples each and get their mean F1-score\"\n",
+    ")\n",
+    "bootstrap_patritions_f1_scores = get_f1_scores_of_bootstraping_partitions_full_int_q(\n",
+    "    tflite_model_quant_file, x_val_np, y_val_np\n",
+    ")\n",
     "print(\"Bootstrap mean F1-score: \", np.mean(bootstrap_patritions_f1_scores))\n",
-    "\n",
     "\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
@@ -522,11 +571,19 @@
     "evaluate_prediction(y_test_np, predictions)\n",
     "\n",
     "print(\"\\nDevide dataset into 10 non-overlapping patritions and get their mean F1-score\")\n",
-    "non_overlap_patritions_f1_scores = get_f1_scores_of_non_overlapping_partitions_full_int_q(tflite_model_quant_file, x_test_np, y_test_np)\n",
+    "non_overlap_patritions_f1_scores = (\n",
+    "    get_f1_scores_of_non_overlapping_partitions_full_int_q(\n",
+    "        tflite_model_quant_file, x_test_np, y_test_np\n",
+    "    )\n",
+    ")\n",
     "print(\"Non-overlap mean F1-score: \", np.mean(non_overlap_patritions_f1_scores))\n",
     "\n",
-    "print(\"\\nGet 100 bootstrap samples from dataset with 100 samples each and get their mean F1-score\")\n",
-    "bootstrap_patritions_f1_scores = get_f1_scores_of_bootstraping_partitions_full_int_q(tflite_model_quant_file, x_test_np, y_test_np)\n",
+    "print(\n",
+    "    \"\\nGet 100 bootstrap samples from dataset with 100 samples each and get their mean F1-score\"\n",
+    ")\n",
+    "bootstrap_patritions_f1_scores = get_f1_scores_of_bootstraping_partitions_full_int_q(\n",
+    "    tflite_model_quant_file, x_test_np, y_test_np\n",
+    ")\n",
     "print(\"Bootstrap mean F1-score: \", np.mean(bootstrap_patritions_f1_scores))\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
