--- a/notebooks/transformer/tiny_transformer_time_ser_ptq.ipynb
+++ b/notebooks/transformer/tiny_transformer_time_ser_ptq.ipynb
@@ -25,31 +25,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "import os\n",
-    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '../../')))\n",
+    "import sys\n",
     "\n",
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "\n",
-    "import time\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"../../\")))\n",
     "\n",
     "import random\n",
+    "import time\n",
+    "\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
     "tf.random.set_seed(3407)\n",
     "np.random.seed(3407)\n",
     "random.seed(3407)\n",
     "\n",
     "from notebooks.helper_functions import (\n",
-    "    evaluate_prediction,\n",
-    "    get_file_size, \n",
-    "    convert_bytes, \n",
+    "    convert_bytes,\n",
     "    convert_prefetchdataset_to_numpy_arrays,\n",
-    "    predict_and_print_full_results,\n",
+    "    evaluate_prediction,\n",
     "    evaluate_time_of_prediction,\n",
     "    full_int_model_predict,\n",
-    "    get_f1_scores_of_non_overlapping_partitions_full_int_q,\n",
     "    get_f1_scores_of_bootstraping_partitions_full_int_q,\n",
-    "    )"
+    "    get_f1_scores_of_non_overlapping_partitions_full_int_q,\n",
+    "    get_file_size,\n",
+    "    predict_and_print_full_results,\n",
+    ")"
    ]
   },
   {
@@ -90,9 +91,30 @@
     }
    ],
    "source": [
-    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\"../../dataset/training\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\"../../dataset/testing\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\"../../dataset/validation\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
+    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../../dataset/training\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../../dataset/testing\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../../dataset/validation\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
     "\n",
     "label_names = np.array(test_dataset.class_names)\n",
     "print(\"Classes: \", label_names)"
@@ -104,9 +126,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(train_dataset, data_type=\"time-series\")\n",
-    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(val_dataset, data_type=\"time-series\")\n",
-    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(test_dataset, data_type=\"time-series\")"
+    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    train_dataset, data_type=\"time-series\"\n",
+    ")\n",
+    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    val_dataset, data_type=\"time-series\"\n",
+    ")\n",
+    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    test_dataset, data_type=\"time-series\"\n",
+    ")"
    ]
   },
   {
@@ -309,17 +337,21 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(tflite_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    tflite_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
     "evaluate_time_of_prediction(tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
@@ -488,20 +520,26 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(dynamic_range_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    dynamic_range_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    "    ) = predict_and_print_full_results(dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
-    "evaluate_time_of_prediction(dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    "evaluate_time_of_prediction(\n",
+    "    dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "DRQ_MODEL_FILE_NAME = \"../../models/time_series_models_from_notebooks/tiny_transformer/quantized/tiny_transformer_time_series_drq.tflite\"\n",
     "open(DRQ_MODEL_FILE_NAME, \"wb\").write(dynamic_range_quant_model)\n",
@@ -668,20 +706,26 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(float16_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    float16_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    "    ) = predict_and_print_full_results(float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
-    "evaluate_time_of_prediction(float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    "evaluate_time_of_prediction(\n",
+    "    float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "FLOAT16_QUANT_MODEL_FILE_NAME = \"../../models/time_series_models_from_notebooks/tiny_transformer/quantized/tiny_transformer_time_series_float16q.tflite\"\n",
     "open(FLOAT16_QUANT_MODEL_FILE_NAME, \"wb\").write(float16_quant_model)\n",
@@ -802,8 +846,11 @@
    ],
    "source": [
     "def representative_data_gen():\n",
-    "  for input_value in tf.data.Dataset.from_tensor_slices(x_train_np).batch(1).take(10000):\n",
-    "    yield [input_value]\n",
+    "    for input_value in (\n",
+    "        tf.data.Dataset.from_tensor_slices(x_train_np).batch(1).take(10000)\n",
+    "    ):\n",
+    "        yield [input_value]\n",
+    "\n",
     "\n",
     "full_int_converter = tf.lite.TFLiteConverter.from_keras_model(baseline_model)\n",
     "full_int_converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
@@ -833,10 +880,10 @@
    ],
    "source": [
     "interpreter = tf.lite.Interpreter(model_content=full_int_model)\n",
-    "input_type = interpreter.get_input_details()[0]['dtype']\n",
-    "print('input: ', input_type)\n",
-    "output_type = interpreter.get_output_details()[0]['dtype']\n",
-    "print('output: ', output_type)"
+    "input_type = interpreter.get_input_details()[0][\"dtype\"]\n",
+    "print(\"input: \", input_type)\n",
+    "output_type = interpreter.get_output_details()[0][\"dtype\"]\n",
+    "print(\"output: \", output_type)"
    ]
   },
   {
@@ -858,11 +905,15 @@
    "source": [
     "import pathlib\n",
     "\n",
-    "tflite_models_dir = pathlib.Path(\"../../models/time_series_models_from_notebooks/tiny_transformer/quantized/\")\n",
+    "tflite_models_dir = pathlib.Path(\n",
+    "    \"../../models/time_series_models_from_notebooks/tiny_transformer/quantized/\"\n",
+    ")\n",
     "tflite_models_dir.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "# Save the quantized model:\n",
-    "tflite_model_full_int_q_file = tflite_models_dir/\"tiny_transformer_time_series_full_int_q.tflite\"\n",
+    "tflite_model_full_int_q_file = (\n",
+    "    tflite_models_dir / \"tiny_transformer_time_series_full_int_q.tflite\"\n",
+    ")\n",
     "tflite_model_full_int_q_file.write_bytes(full_int_model)"
    ]
   },
@@ -919,7 +970,6 @@
     "# print(\"\\nGet 100 bootstrap samples from dataset with 100 samples each and get their mean F1-score\")\n",
     "# bootstrap_patritions_f1_scores = get_f1_scores_of_bootstraping_partitions_full_int_q(tflite_model_full_int_q_file, x_val_np, y_val_np)\n",
     "# print(\"Bootstrap mean F1-score: \", np.mean(bootstrap_patritions_f1_scores))\n",
-    "\n",
     "\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
