--- a/notebooks/transformer/vit_mel_spec_ptq.ipynb
+++ b/notebooks/transformer/vit_mel_spec_ptq.ipynb
@@ -31,34 +31,33 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "from vit_for_tflite_compartible import PatchEncoder\n",
-    "import numpy as np\n",
-    "\n",
+    "import random\n",
     "import time\n",
     "\n",
-    "import random\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from vit_for_tflite_compartible import PatchEncoder\n",
+    "\n",
     "tf.random.set_seed(3407)\n",
     "np.random.seed(3407)\n",
     "random.seed(3407)\n",
     "\n",
-    "from sklearn.metrics import f1_score\n",
-    "\n",
     "from create_spectrogram import (\n",
-    "    create_spectrograms_from_audio_dataset, \n",
-    "    extract_patches_from_audio_dataset\n",
+    "    create_spectrograms_from_audio_dataset,\n",
+    "    extract_patches_from_audio_dataset,\n",
     ")\n",
     "from helper_functions import (\n",
-    "    evaluate_prediction,\n",
-    "    get_file_size, \n",
-    "    convert_bytes, \n",
+    "    convert_bytes,\n",
     "    convert_prefetchdataset_to_numpy_arrays,\n",
-    "    predict_and_print_full_results,\n",
+    "    evaluate_prediction,\n",
     "    evaluate_time_of_prediction,\n",
     "    full_int_model_predict,\n",
-    "    get_f1_scores_of_non_overlapping_partitions_full_int_q,\n",
     "    get_f1_scores_of_bootstraping_partitions_full_int_q,\n",
-    "    )"
+    "    get_f1_scores_of_non_overlapping_partitions_full_int_q,\n",
+    "    get_file_size,\n",
+    "    predict_and_print_full_results,\n",
+    ")\n",
+    "from sklearn.metrics import f1_score"
    ]
   },
   {
@@ -111,9 +110,30 @@
     }
    ],
    "source": [
-    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/training\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/testing\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
-    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\"../dataset/validation\", labels='inferred', sampling_rate=16000, batch_size=32, shuffle=True, seed=3407)\n",
+    "train_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/training\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "test_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/testing\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
+    "val_dataset = tf.keras.utils.audio_dataset_from_directory(\n",
+    "    \"../dataset/validation\",\n",
+    "    labels=\"inferred\",\n",
+    "    sampling_rate=16000,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=3407,\n",
+    ")\n",
     "\n",
     "label_names = np.array(test_dataset.class_names)\n",
     "print(\"Classes: \", label_names)"
@@ -140,13 +160,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_patches_ds = extract_patches_from_audio_dataset(train_dataset, sample_rate = 16000, patch_size=8).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "test_patches_ds = extract_patches_from_audio_dataset(test_dataset, sample_rate = 16000, patch_size=8).cache().prefetch(tf.data.AUTOTUNE)\n",
-    "val_patches_ds = extract_patches_from_audio_dataset(val_dataset, sample_rate = 16000, patch_size=8).cache().prefetch(tf.data.AUTOTUNE)\n",
+    "train_patches_ds = (\n",
+    "    extract_patches_from_audio_dataset(train_dataset, sample_rate=16000, patch_size=8)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "test_patches_ds = (\n",
+    "    extract_patches_from_audio_dataset(test_dataset, sample_rate=16000, patch_size=8)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "val_patches_ds = (\n",
+    "    extract_patches_from_audio_dataset(val_dataset, sample_rate=16000, patch_size=8)\n",
+    "    .cache()\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
     "\n",
-    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(train_patches_ds, data_type=\"not spectrogram\")\n",
-    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(test_patches_ds, data_type=\"not spectrogram\")\n",
-    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(val_patches_ds, data_type=\"not spectrogram\")"
+    "x_train_np, y_train_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    train_patches_ds, data_type=\"not spectrogram\"\n",
+    ")\n",
+    "x_test_np, y_test_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    test_patches_ds, data_type=\"not spectrogram\"\n",
+    ")\n",
+    "x_val_np, y_val_np = convert_prefetchdataset_to_numpy_arrays(\n",
+    "    val_patches_ds, data_type=\"not spectrogram\"\n",
+    ")"
    ]
   },
   {
@@ -246,8 +284,12 @@
     }
    ],
    "source": [
-    "BASE_MODEL_FILE_NAME = \"../spectrogram_models_from_notebooks/vit/hpo/vit_mel_spec_final.keras\"\n",
-    "baseline_model = tf.keras.models.load_model(BASE_MODEL_FILE_NAME, compile=True, custom_objects={ \"PatchEncoder\": PatchEncoder})\n",
+    "BASE_MODEL_FILE_NAME = (\n",
+    "    \"../spectrogram_models_from_notebooks/vit/hpo/vit_mel_spec_final.keras\"\n",
+    ")\n",
+    "baseline_model = tf.keras.models.load_model(\n",
+    "    BASE_MODEL_FILE_NAME, compile=True, custom_objects={\"PatchEncoder\": PatchEncoder}\n",
+    ")\n",
     "baseline_model.summary()\n",
     "convert_bytes(get_file_size(BASE_MODEL_FILE_NAME), \"MB\")"
    ]
@@ -281,10 +323,12 @@
    "source": [
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    ") = predict_and_print_full_results(baseline_model, x_test_np, y_test_np, model_format=\"keras\")"
+    ") = predict_and_print_full_results(\n",
+    "    baseline_model, x_test_np, y_test_np, model_format=\"keras\"\n",
+    ")"
    ]
   },
   {
@@ -355,7 +399,7 @@
    ],
    "source": [
     "converter = tf.lite.TFLiteConverter.from_keras_model(baseline_model)\n",
-    "tflite_model = converter.convert()\n"
+    "tflite_model = converter.convert()"
    ]
   },
   {
@@ -421,22 +465,28 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(tflite_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    tflite_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    "    ) = predict_and_print_full_results(tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
     "evaluate_time_of_prediction(tflite_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
     "\n",
-    "TF_LITE_MODEL_FILE_NAME = \"../spectrogram_models_from_notebooks/vit/quantized/vit_mel_spec.tflite\"\n",
+    "TF_LITE_MODEL_FILE_NAME = (\n",
+    "    \"../spectrogram_models_from_notebooks/vit/quantized/vit_mel_spec.tflite\"\n",
+    ")\n",
     "open(TF_LITE_MODEL_FILE_NAME, \"wb\").write(tflite_model)\n",
     "print(\"\\n\")\n",
     "print(\"Model file name: \", TF_LITE_MODEL_FILE_NAME)\n",
@@ -569,22 +619,30 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(dynamic_range_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    dynamic_range_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    "    ) = predict_and_print_full_results(dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
-    "evaluate_time_of_prediction(dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    "evaluate_time_of_prediction(\n",
+    "    dynamic_range_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
-    "DRQ_MODEL_FILE_NAME = \"../spectrogram_models_from_notebooks/vit/quantized/vit_mel_spec_drq.tflite\"\n",
+    "DRQ_MODEL_FILE_NAME = (\n",
+    "    \"../spectrogram_models_from_notebooks/vit/quantized/vit_mel_spec_drq.tflite\"\n",
+    ")\n",
     "open(DRQ_MODEL_FILE_NAME, \"wb\").write(dynamic_range_quant_model)\n",
     "print(\"\\n\")\n",
     "print(\"Model file name: \", DRQ_MODEL_FILE_NAME)\n",
@@ -718,22 +776,30 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(float16_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    float16_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    "    ) = predict_and_print_full_results(float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
-    "evaluate_time_of_prediction(float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    "evaluate_time_of_prediction(\n",
+    "    float16_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
-    "FLOAT16_QUANT_MODEL_FILE_NAME = \"../spectrogram_models_from_notebooks/vit/quantized/vit_mel_spec_float16q.tflite\"\n",
+    "FLOAT16_QUANT_MODEL_FILE_NAME = (\n",
+    "    \"../spectrogram_models_from_notebooks/vit/quantized/vit_mel_spec_float16q.tflite\"\n",
+    ")\n",
     "open(FLOAT16_QUANT_MODEL_FILE_NAME, \"wb\").write(float16_quant_model)\n",
     "print(\"\\n\")\n",
     "print(\"Model file name: \", FLOAT16_QUANT_MODEL_FILE_NAME)\n",
@@ -809,10 +875,13 @@
    ],
    "source": [
     "def representative_data_gen():\n",
-    "  for input_value in tf.data.Dataset.from_tensor_slices(x_val_np).batch(1).take(100):\n",
-    "    yield [input_value]\n",
+    "    for input_value in tf.data.Dataset.from_tensor_slices(x_val_np).batch(1).take(100):\n",
+    "        yield [input_value]\n",
     "\n",
-    "float_fallback_quant_converter = tf.lite.TFLiteConverter.from_keras_model(baseline_model)\n",
+    "\n",
+    "float_fallback_quant_converter = tf.lite.TFLiteConverter.from_keras_model(\n",
+    "    baseline_model\n",
+    ")\n",
     "float_fallback_quant_converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
     "float_fallback_quant_converter.representative_dataset = representative_data_gen\n",
     "float_fallback_quant_model = float_fallback_quant_converter.convert()"
@@ -873,22 +942,30 @@
    "source": [
     "print(\"Validation dataset:\")\n",
     "(\n",
-    "    y_pred_val, \n",
-    "    non_overlap_patritions_f1_scores_val, \n",
+    "    y_pred_val,\n",
+    "    non_overlap_patritions_f1_scores_val,\n",
     "    bootstrap_patritions_f1_scores_val,\n",
-    "    ) = predict_and_print_full_results(float_fallback_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    float_fallback_quant_model, x_val_np, y_val_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
     "(\n",
-    "    y_pred_test, \n",
-    "    non_overlap_patritions_f1_scores_test, \n",
+    "    y_pred_test,\n",
+    "    non_overlap_patritions_f1_scores_test,\n",
     "    bootstrap_patritions_f1_scores_test,\n",
-    "    ) = predict_and_print_full_results(float_fallback_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    ") = predict_and_print_full_results(\n",
+    "    float_fallback_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
-    "evaluate_time_of_prediction(float_fallback_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\")\n",
+    "evaluate_time_of_prediction(\n",
+    "    float_fallback_quant_model, x_test_np, y_test_np, model_format=\"tf_lite\"\n",
+    ")\n",
     "\n",
-    "FLOAT_FALLBACK_QUANT_MODEL_FILE_NAME = \"../spectrogram_models_from_notebooks/vit/quantized/vit_mel_spec_fallback_q.tflite\"\n",
+    "FLOAT_FALLBACK_QUANT_MODEL_FILE_NAME = (\n",
+    "    \"../spectrogram_models_from_notebooks/vit/quantized/vit_mel_spec_fallback_q.tflite\"\n",
+    ")\n",
     "open(FLOAT_FALLBACK_QUANT_MODEL_FILE_NAME, \"wb\").write(float_fallback_quant_model)\n",
     "print(\"\\n\")\n",
     "print(\"Model file name: \", FLOAT_FALLBACK_QUANT_MODEL_FILE_NAME)\n",
@@ -971,8 +1048,9 @@
    ],
    "source": [
     "def representative_data_gen():\n",
-    "  for input_value in tf.data.Dataset.from_tensor_slices(x_val_np).batch(1).take(100):\n",
-    "    yield [input_value]\n",
+    "    for input_value in tf.data.Dataset.from_tensor_slices(x_val_np).batch(1).take(100):\n",
+    "        yield [input_value]\n",
+    "\n",
     "\n",
     "full_int_converter = tf.lite.TFLiteConverter.from_keras_model(baseline_model)\n",
     "full_int_converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
@@ -1002,10 +1080,10 @@
    ],
    "source": [
     "interpreter = tf.lite.Interpreter(model_content=tflite_model_full_int)\n",
-    "input_type = interpreter.get_input_details()[0]['dtype']\n",
-    "print('input: ', input_type)\n",
-    "output_type = interpreter.get_output_details()[0]['dtype']\n",
-    "print('output: ', output_type)"
+    "input_type = interpreter.get_input_details()[0][\"dtype\"]\n",
+    "print(\"input: \", input_type)\n",
+    "output_type = interpreter.get_output_details()[0][\"dtype\"]\n",
+    "print(\"output: \", output_type)"
    ]
   },
   {
@@ -1031,7 +1109,7 @@
     "tflite_models_dir.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "# Save the quantized model:\n",
-    "tflite_model_full_int_file = tflite_models_dir/\"vit_mel_spec_full_int_q.tflite\"\n",
+    "tflite_model_full_int_file = tflite_models_dir / \"vit_mel_spec_full_int_q.tflite\"\n",
     "tflite_model_full_int_file.write_bytes(tflite_model_full_int)"
    ]
   },
@@ -1084,13 +1162,20 @@
     "evaluate_prediction(y_val_np, predictions)\n",
     "\n",
     "print(\"\\nDevide dataset into 10 non-overlapping patritions and get their mean F1-score\")\n",
-    "non_overlap_patritions_f1_scores = get_f1_scores_of_non_overlapping_partitions_full_int_q(tflite_model_full_int_file, x_val_np, y_val_np)\n",
+    "non_overlap_patritions_f1_scores = (\n",
+    "    get_f1_scores_of_non_overlapping_partitions_full_int_q(\n",
+    "        tflite_model_full_int_file, x_val_np, y_val_np\n",
+    "    )\n",
+    ")\n",
     "print(\"Non-overlap mean F1-score: \", np.mean(non_overlap_patritions_f1_scores))\n",
     "\n",
-    "print(\"\\nGet 100 bootstrap samples from dataset with 100 samples each and get their mean F1-score\")\n",
-    "bootstrap_patritions_f1_scores = get_f1_scores_of_bootstraping_partitions_full_int_q(tflite_model_full_int_file, x_val_np, y_val_np)\n",
+    "print(\n",
+    "    \"\\nGet 100 bootstrap samples from dataset with 100 samples each and get their mean F1-score\"\n",
+    ")\n",
+    "bootstrap_patritions_f1_scores = get_f1_scores_of_bootstraping_partitions_full_int_q(\n",
+    "    tflite_model_full_int_file, x_val_np, y_val_np\n",
+    ")\n",
     "print(\"Bootstrap mean F1-score: \", np.mean(bootstrap_patritions_f1_scores))\n",
-    "\n",
     "\n",
     "\n",
     "print(\"\\nTest dataset:\")\n",
@@ -1098,11 +1183,19 @@
     "evaluate_prediction(y_test_np, predictions)\n",
     "\n",
     "print(\"\\nDevide dataset into 10 non-overlapping patritions and get their mean F1-score\")\n",
-    "non_overlap_patritions_f1_scores = get_f1_scores_of_non_overlapping_partitions_full_int_q(tflite_model_full_int_file, x_test_np, y_test_np)\n",
+    "non_overlap_patritions_f1_scores = (\n",
+    "    get_f1_scores_of_non_overlapping_partitions_full_int_q(\n",
+    "        tflite_model_full_int_file, x_test_np, y_test_np\n",
+    "    )\n",
+    ")\n",
     "print(\"Non-overlap mean F1-score: \", np.mean(non_overlap_patritions_f1_scores))\n",
     "\n",
-    "print(\"\\nGet 100 bootstrap samples from dataset with 100 samples each and get their mean F1-score\")\n",
-    "bootstrap_patritions_f1_scores = get_f1_scores_of_bootstraping_partitions_full_int_q(tflite_model_full_int_file, x_test_np, y_test_np)\n",
+    "print(\n",
+    "    \"\\nGet 100 bootstrap samples from dataset with 100 samples each and get their mean F1-score\"\n",
+    ")\n",
+    "bootstrap_patritions_f1_scores = get_f1_scores_of_bootstraping_partitions_full_int_q(\n",
+    "    tflite_model_full_int_file, x_test_np, y_test_np\n",
+    ")\n",
     "print(\"Bootstrap mean F1-score: \", np.mean(bootstrap_patritions_f1_scores))\n",
     "\n",
     "print(\"\\nTime for Test dataset:\")\n",
@@ -1136,10 +1229,10 @@
    ],
    "source": [
     "interpreter = tf.lite.Interpreter(model_content=tflite_model_full_int)\n",
-    "input_type = interpreter.get_input_details()[0]['dtype']\n",
-    "print('input: ', input_type)\n",
-    "output_type = interpreter.get_output_details()[0]['dtype']\n",
-    "print('output: ', output_type)"
+    "input_type = interpreter.get_input_details()[0][\"dtype\"]\n",
+    "print(\"input: \", input_type)\n",
+    "output_type = interpreter.get_output_details()[0][\"dtype\"]\n",
+    "print(\"output: \", output_type)"
    ]
   },
   {
